--- a/code/chap03.ipynb
+++ b/code/chap03.ipynb
@@ -281,7 +281,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `if` statements in the previous section used the comparison operator `<`.  The other comparison operators are listed in the book.\n",
+    "The `if` statements in the previous section used the comparison operator `==`.  The other comparison operators are listed in the book.\n",
     "\n",
     "It is easy to confuse the comparison operator `==` with the assignment operator `=`.\n",
     "\n",
@@ -301,7 +301,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Whereas `==` compared two values and returns `True` if they are equal."
+    "Whereas `==` compares two values and returns `True` if they are equal."
    ]
   },
   {
@@ -440,8 +440,7 @@
    "outputs": [],
    "source": [
     "run_simulation(bikeshare, 0.4, 0.2, 60)\n",
-    "decorate_bikeshare()\n",
-    "savefig('figs/chap02-fig01.pdf')"
+    "decorate_bikeshare()"
    ]
   },
   {
@@ -588,7 +587,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
