--- a/code/chap04.ipynb
+++ b/code/chap04.ipynb
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,18 +495,14 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "plot(sweep, label='Olin')\n",
     "\n",
     "decorate(title='Olin-Wellesley Bikeshare',\n",
     "         xlabel='Arrival rate at Olin (p1 in customers/min)', \n",
-    "         ylabel='Number of unhappy customers')\n",
-    "\n",
-    "savefig('figs/chap02-fig02.pdf')"
+    "         ylabel='Number of unhappy customers')"
    ]
   },
   {
@@ -523,9 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Solution goes here"
@@ -550,9 +544,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Solution goes here"
@@ -571,7 +563,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Optional exercises\n",
+    "## Optional Exercises\n",
     "\n",
     "The following two exercises are a little more challenging.  If you are comfortable with what you have learned so far, you should give them a try.  If you feel like you have your hands full, you might want to skip them for now.\n",
     "\n",
@@ -592,15 +584,13 @@
     "num_runs = 10\n",
     "```\n",
     "\n",
-    "Display the resulting `TimeSeries` and use the `mean` function provided by the `TimeSeries` object to compute the average number of unhappy customers."
+    "Display the resulting `TimeSeries` and use the `mean` function provided by the `TimeSeries` object to compute the average number of unhappy customers (see Section 2.7)."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Solution goes here"
@@ -669,7 +659,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
