--- a/code/chap05.ipynb
+++ b/code/chap05.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +233,8 @@
     "    \n",
     "decorate(xlabel='Year',\n",
     "         ylabel='World population (billion)')\n",
-    "savefig('figs/chap03-fig01.pdf')"
+    "\n",
+    "savefig('figs/chap05-fig01.pdf')"
    ]
   },
   {
@@ -504,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,7 +516,8 @@
     "decorate(xlabel='Year', \n",
     "         ylabel='World population (billion)',\n",
     "         title='Constant growth')\n",
-    "savefig('figs/chap03-fig02.pdf')"
+    "\n",
+    "savefig('figs/chap05-fig02.pdf')"
    ]
   },
   {
@@ -544,12 +546,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Solution goes here"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "census.loc[1960:1970]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -568,7 +586,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
