--- a/code/chap10.ipynb
+++ b/code/chap10.ipynb
@@ -16,9 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Configure Jupyter so figures appear in the notebook\n",
@@ -47,9 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "filename = 'data/World_population_estimates.html'\n",
@@ -273,6 +269,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filename = 'data/World_population_estimates.html'\n",
+    "tables = read_html(filename, header=0, index_col=0, decimal='M')\n",
+    "len(tables)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -281,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,29 +305,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "table1.tail()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Some of the estimates are in a form we can't read as numbers.  We could clean them up by hand, but for simplicity I'll replace any value that has an `M` in it with `NaN`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "table1.replace('M', np.nan, regex=True, inplace=True)"
    ]
   },
   {
@@ -333,41 +322,28 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "table1.columns = ['prb', 'un', 'maddison', 'hyde', 'tanton', \n",
-    "                  'biraben', 'mj', 'thomlinson', 'durand', 'clark']"
+    "table1.columns = ['PRB', 'UN', 'Maddison', 'HYDE', 'Tanton', \n",
+    "                  'Biraben', 'McEvedy & Jones', 'Thomlinson', 'Durand', 'Clark']"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This function plots selected estimates."
+    "Some of the estimates are in a form Pandas doesn't recognize as numbers, but we can coerce them to be numeric."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_prehistory(table):\n",
-    "    \"\"\"Plots population estimates.\n",
-    "    \n",
-    "    table: DataFrame\n",
-    "    \"\"\"\n",
-    "    plot(table.prb, 'ro', label='PRB')\n",
-    "    plot(table.un, 'co', label='UN')\n",
-    "    plot(table.hyde, 'yo', label='HYDE')\n",
-    "    plot(table.tanton, 'go', label='Tanton')\n",
-    "    plot(table.biraben, 'bo', label='Biraben')\n",
-    "    plot(table.mj, 'mo', label='McEvedy & Jones')"
+    "for col in table1.columns:\n",
+    "    table1[col] = pd.to_numeric(table1[col], errors='coerce')"
    ]
   },
   {
@@ -385,10 +361,11 @@
    },
    "outputs": [],
    "source": [
-    "plot_prehistory(table1)\n",
-    "decorate(xlabel='Year', \n",
+    "table1.plot()\n",
+    "decorate(xlim=[-10000, 2000], xlabel='Year', \n",
     "         ylabel='World population (millions)',\n",
-    "         title='Prehistoric population estimates')"
+    "         title='Prehistoric population estimates')\n",
+    "plt.legend(fontsize='small');"
    ]
   },
   {
@@ -404,17 +381,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_prehistory(table1)\n",
+    "table1.plot()\n",
     "decorate(xlim=[0, 2000], xlabel='Year', \n",
     "         ylabel='World population (millions)',\n",
-    "         title='Prehistoric population estimates')"
+    "         title='CE population estimates')\n",
+    "plt.legend(fontsize='small');"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "See if you can find a model that fits these data well from Year -1000 to 1940, or from Year 1 to 1940.\n",
+    "See if you can find a model that fits these data well from Year 0 to 1950.\n",
     "\n",
     "How well does your best model predict actual population growth from 1950 to the present?"
    ]
@@ -431,33 +409,6 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Solution goes here"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Solution goes here"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Solution goes here"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +439,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
