--- a/code/chap13.ipynb
+++ b/code/chap13.ipynb
@@ -104,13 +104,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Here's an updated version of `run_simulation` that uses `unpack`."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -124,7 +117,7 @@
     "    \n",
     "    returns: TimeFrame\n",
     "    \"\"\"\n",
-    "    unpack(system)\n",
+    "    init, t0, t_end = system.init, system.t0, system.t_end\n",
     "    \n",
     "    frame = TimeFrame(columns=init.index)\n",
     "    frame.row[t0] = init\n",
@@ -136,20 +129,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Exercise:** Write a version of `update_func` that uses `unpack`."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Original\n",
-    "\n",
     "def update_func(state, t, system):\n",
     "    \"\"\"Update the SIR model.\n",
     "    \n",
@@ -159,52 +143,17 @@
     "    \n",
     "    returns: State (sir)\n",
     "    \"\"\"\n",
+    "    beta, gamma = system.beta, system.gamma\n",
     "    s, i, r = state\n",
     "\n",
-    "    infected = system.beta * i * s    \n",
-    "    recovered = system.gamma * i\n",
+    "    infected = beta * i * s    \n",
+    "    recovered = gamma * i\n",
     "    \n",
     "    s -= infected\n",
     "    i += infected - recovered\n",
     "    r += recovered\n",
     "    \n",
     "    return State(S=s, I=i, R=r)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Solution goes here"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Test the updated code with this example."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "system = make_system(0.333, 0.25)\n",
-    "results = run_simulation(system, update_func)\n",
-    "results.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_results(results.S, results.I, results.R)"
    ]
   },
   {
@@ -223,12 +172,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "beta_array = linspace(0.1, 1.1, 11)\n",
-    "gamma = 0.25"
+    "beta_array = [0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1.0 , 1.1]\n",
+    "gamma = 0.2"
    ]
   },
   {
@@ -240,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,17 +246,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "label = 'gamma = ' + str(gamma)\n",
+    "label = 'γ = ' + str(gamma)\n",
     "plot(infected_sweep, label=label)\n",
     "\n",
-    "decorate(xlabel='Contacts per day (beta)',\n",
+    "decorate(xlabel='Contact rate (β)',\n",
     "         ylabel='Fraction infected')\n",
     "\n",
-    "savefig('figs/chap06-fig01.pdf')"
+    "savefig('figs/chap13-fig01.pdf')"
    ]
   },
   {
@@ -326,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,18 +316,54 @@
     "    label = 'γ = ' + str(gamma)\n",
     "    plot(infected_sweep, label=label)\n",
     "    \n",
-    "decorate(xlabel='Contacts per day (beta)',\n",
+    "decorate(xlabel='Contact rate (β)',\n",
     "         ylabel='Fraction infected',\n",
     "         loc='upper left')\n",
     "\n",
-    "savefig('figs/chap06-fig02.pdf')"
+    "savefig('figs/chap13-fig02.pdf')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** Exercise:**  Suppose the infectious period for the Freshman Plague is known to be 2 days on average, and suppose during one particularly bad year, 40% of the class is infected at some point.  Estimate the time between contacts."
+    "**Exercise:**  Suppose the infectious period for the Freshman Plague is known to be 2 days on average, and suppose during one particularly bad year, 40% of the class is infected at some point.  Estimate the time between contacts."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solution goes here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solution goes here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solution goes here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## SweepFrame\n",
+    "\n",
+    "The following sweeps two parameters and stores the results in a `SweepFrame`"
    ]
   },
   {
@@ -387,7 +372,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Solution goes here"
+    "def sweep_parameters(beta_array, gamma_array):\n",
+    "    \"\"\"Sweep a range of values for beta and gamma.\n",
+    "    \n",
+    "    beta_array: array of infection rates\n",
+    "    gamma_array: array of recovery rates\n",
+    "    \n",
+    "    returns: SweepFrame with one row for each beta\n",
+    "             and one column for each gamma\n",
+    "    \"\"\"\n",
+    "    frame = SweepFrame(columns=gamma_array)\n",
+    "    for gamma in gamma_array:\n",
+    "        frame[gamma] = sweep_beta(beta_array, gamma)\n",
+    "    return frame"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here's what the `SweepFrame` look like."
    ]
   },
   {
@@ -396,7 +400,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Solution goes here"
+    "frame = sweep_parameters(beta_array, gamma_array)\n",
+    "frame.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And here's how we can plot the results."
    ]
   },
   {
@@ -405,8 +417,69 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Solution goes here"
+    "for gamma in gamma_array:\n",
+    "    label = 'γ = ' + str(gamma)\n",
+    "    plot(frame[gamma], label=label)\n",
+    "    \n",
+    "decorate(xlabel='Contact rate (β)',\n",
+    "         ylabel='Fraction infected',\n",
+    "         title='',\n",
+    "         loc='upper left')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can also plot one line for each value of `beta`, although there are a lot of them."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for beta in [1.1, 0.9, 0.7, 0.5, 0.3]:\n",
+    "    label = 'β = ' + str(beta)\n",
+    "    plot(frame.row[beta], label=label)\n",
+    "    \n",
+    "decorate(xlabel='Recovery rate (γ)',\n",
+    "         ylabel='Fraction infected')\n",
+    "\n",
+    "savefig('figs/chap13-fig03.pdf')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It's often useful to separate the code that generates results from the code that plots the results, so we can run the simulations once, save the results, and then use them for different analysis, visualization, etc.\n",
+    "\n",
+    "After running `sweep_parameters`, we have a `SweepFrame` with one row for each value of `beta` and one column for each value of `gamma`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "contour(frame)\n",
+    "\n",
+    "decorate(xlabel='Recovery rate (gamma)',\n",
+    "         ylabel='Contact rate (beta)',\n",
+    "         title='Fraction infected, contour plot')\n",
+    "\n",
+    "savefig('figs/chap13-fig04.pdf')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -425,7 +498,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
