--- a/code/chap15.ipynb
+++ b/code/chap15.ipynb
@@ -64,6 +64,7 @@
     "                volume=300,\n",
     "                r=0.01,\n",
     "                T_env=22,\n",
+    "                t_0=0,\n",
     "                t_end=30,\n",
     "                dt=1)"
    ]
@@ -90,7 +91,7 @@
     "    \n",
     "    returns: State (temp)\n",
     "    \"\"\"\n",
-    "    unpack(system)\n",
+    "    r, T_env, dt = system.r, system.T_env, system.dt\n",
     "    \n",
     "    T = state.T\n",
     "    T += -r * (T - T_env) * dt\n",
@@ -135,17 +136,15 @@
     "    system: System object\n",
     "    update_func: function that updates state\n",
     "    \"\"\"\n",
-    "    unpack(system)\n",
+    "    init = system.init\n",
+    "    t_0, t_end, dt = system.t_0, system.t_end, system.dt\n",
     "    \n",
     "    frame = TimeFrame(columns=init.index)\n",
-    "    frame.row[0] = init\n",
-    "    ts = linrange(0, t_end, dt)\n",
+    "    frame.row[t_0] = init\n",
+    "    ts = linrange(t_0, t_end, dt)\n",
     "    \n",
     "    for t in ts:\n",
     "        frame.row[t+dt] = update_func(frame.row[t], t, system)\n",
-    "        \n",
-    "    # store the final temperature in T_final\n",
-    "    system.T_final = get_last_value(frame.T)\n",
     "    \n",
     "    return frame"
    ]
@@ -197,7 +196,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "coffee.T_final"
+    "coffee.T_final = get_last_value(results.T)\n",
+    "T_final = get_last_value(results.T)"
    ]
   },
   {
@@ -226,15 +226,15 @@
     "    returns: System object\n",
     "    \"\"\"\n",
     "    init = State(T=T_init)\n",
-    "    \n",
-    "    # T_final is used to store the final temperature.\n",
-    "    # Before the simulation runs, T_final = T_init\n",
-    "    T_final = T_init\n",
-    "\n",
-    "    T_env = 22 \n",
-    "    dt = 1\n",
-    "                \n",
-    "    return System(locals())"
+    "                   \n",
+    "    return System(init=init,\n",
+    "                  r=r, \n",
+    "                  volume=volume,\n",
+    "                  temp=T_init,\n",
+    "                  t_0=0, \n",
+    "                  t_end=t_end, \n",
+    "                  dt=1,\n",
+    "                  T_env=22)"
    ]
   },
   {
@@ -252,7 +252,7 @@
    "source": [
     "coffee = make_system(T_init=90, r=0.01, volume=300, t_end=30)\n",
     "results = run_simulation(coffee, update_func)\n",
-    "coffee.T_final"
+    "T_final = get_last_value(results.T)"
    ]
   },
   {
@@ -263,7 +263,7 @@
     "\n",
     "**Exercise:**  Simulate the temperature of 50 mL of milk with a starting temperature of 5 degC, in a vessel with the same insulation, for 15 minutes, and plot the results.\n",
     "\n",
-    "By trial and error, find a values for `r` that makes the final temperature close to 20 C."
+    "By trial and error, find a value for `r` that makes the final temperature close to 20 C."
    ]
   },
   {
@@ -310,7 +310,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
