--- a/code/chap17.ipynb
+++ b/code/chap17.ipynb
@@ -16,9 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Configure Jupyter so figures appear in the notebook\n",
@@ -100,14 +98,14 @@
    "source": [
     "subplot(2, 1, 1)\n",
     "plot(data.glucose, 'bo', label='glucose')\n",
-    "decorate(ylabel='mg/dL')\n",
+    "decorate(ylabel='Concentration (mg/dL)')\n",
     "\n",
     "subplot(2, 1, 2)\n",
     "plot(data.insulin, 'go', label='insulin')\n",
     "decorate(xlabel='Time (min)',\n",
-    "         ylabel='$\\mu$U/mL')\n",
+    "         ylabel='Concentration ($\\mu$U/mL)')\n",
     "\n",
-    "savefig('figs/chap08-fig01.pdf')"
+    "savefig('figs/chap17-fig01.pdf')"
    ]
   },
   {
@@ -129,9 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "I = interpolate(data.insulin)"
@@ -194,7 +190,7 @@
     "decorate(xlabel='Time (min)',\n",
     "         ylabel='Concentration ($\\mu$U/mL)')\n",
     "\n",
-    "savefig('figs/chap08-fig02.pdf')"
+    "savefig('figs/chap17-fig02.pdf')"
    ]
   },
   {
@@ -217,218 +213,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### The glucose minimal model\n",
-    "\n",
-    "I'll cheat by starting with parameters that fit the data roughly; then we'll see how to improve them."
+    "**Exercise:** Interpolate the glucose data and generate a plot, similar to the previous one, that shows the data points and the interpolated curve evaluated at the time values in `ts`."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "params = Params(G0 = 290,\n",
-    "                k1 = 0.03,\n",
-    "                k2 = 0.02,\n",
-    "                k3 = 1e-05)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Here's a version of `make_system` that takes the parameters and data:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def make_system(params, data):\n",
-    "    \"\"\"Makes a System object with the given parameters.\n",
-    "    \n",
-    "    params: sequence of G0, k1, k2, k3\n",
-    "    data: DataFrame with `glucose` and `insulin`\n",
-    "    \n",
-    "    returns: System object\n",
-    "    \"\"\"\n",
-    "    G0, k1, k2, k3 = params\n",
-    "    \n",
-    "    Gb = data.glucose[0]\n",
-    "    Ib = data.insulin[0]\n",
-    "    \n",
-    "    t_0 = get_first_label(data)\n",
-    "    t_end = get_last_label(data)\n",
-    "\n",
-    "    init = State(G=G0, X=0)\n",
-    "    \n",
-    "    return System(G0=G0, k1=k1, k2=k2, k3=k3,\n",
-    "                  init=init, Gb=Gb, Ib=Ib,\n",
-    "                  t_0=t_0, t_end=t_end, dt=2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "system = make_system(params, data)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "And here's the update function.  It uses `unpack` to make the system variables accessible without using dot notation, which makes the translation of the differential equations more readable and less error prone."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def update_func(state, t, system):\n",
-    "    \"\"\"Updates the glucose minimal model.\n",
-    "    \n",
-    "    state: State object\n",
-    "    t: time in min\n",
-    "    system: System object\n",
-    "    \n",
-    "    returns: State object\n",
-    "    \"\"\"\n",
-    "    G, X = state\n",
-    "    unpack(system)\n",
-    "        \n",
-    "    dGdt = -k1 * (G - Gb) - X*G\n",
-    "    dXdt = k3 * (I(t) - Ib) - k2 * X\n",
-    "    \n",
-    "    G += dGdt * dt\n",
-    "    X += dXdt * dt\n",
-    "\n",
-    "    return State(G=G, X=X)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Before running the simulation, it is always a good idea to test the update function using the initial conditions.  In this case we can veryify that the results are at least qualitatively correct."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "update_func(system.init, system.t_0, system)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now `run_simulation` is pretty much the same as it always is."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def run_simulation(system, update_func):\n",
-    "    \"\"\"Runs a simulation of the system.\n",
-    "        \n",
-    "    system: System object\n",
-    "    update_func: function that updates state\n",
-    "    \n",
-    "    returns: TimeFrame\n",
-    "    \"\"\"\n",
-    "    unpack(system)\n",
-    "    \n",
-    "    frame = TimeFrame(columns=init.index)\n",
-    "    frame.row[t_0] = init\n",
-    "    ts = linrange(t_0, t_end, dt)\n",
-    "    \n",
-    "    for t in ts:\n",
-    "        frame.row[t+dt] = update_func(frame.row[t], t, system)\n",
-    "    \n",
-    "    return frame"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "And here's how we run it.  `%time` is a Jupyter magic command that runs the function and reports its run time."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%time results = run_simulation(system, update_func);"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The results are in a `TimeFrame object` with one column per state variable."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "results"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The following plot shows the results of the simulation along with the actual glucose data."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "subplot(2, 1, 1)\n",
-    "\n",
-    "plot(results.G, 'b-', label='simulation')\n",
-    "plot(data.glucose, 'bo', label='glucose data')\n",
-    "decorate(ylabel='mg/dL')\n",
-    "\n",
-    "subplot(2, 1, 2)\n",
-    "\n",
-    "plot(results.X, 'g-', label='remote insulin')\n",
-    "\n",
-    "decorate(xlabel='Time (min)', \n",
-    "         ylabel='Arbitrary units')\n",
-    "\n",
-    "savefig('figs/chap08-fig03.pdf')"
+    "# Solution goes here"
    ]
   },
   {
@@ -440,58 +234,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%psource interpolate"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Exercises\n",
-    "\n",
-    "**Exercise:**  Our solution to the differential equations is only approximate because we used a finite step size, `dt=2` minutes.\n",
-    "\n",
-    "If we make the step size smaller, we expect the solution to be more accurate.  Run the simulation with `dt=1` and compare the results.  What is the largest relative error between the two solutions?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Solution goes here"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Solution goes here"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Solution goes here"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Solution goes here"
+    "source_code(interpolate)"
    ]
   },
   {
@@ -518,7 +265,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
