--- a/code/chap18.ipynb
+++ b/code/chap18.ipynb
@@ -16,9 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Configure Jupyter so figures appear in the notebook\n",
@@ -59,9 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "I = interpolate(data.insulin)"
@@ -71,96 +67,79 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Initialize the parameters"
+    "### The glucose minimal model\n",
+    "\n",
+    "I'll cheat by starting with parameters that fit the data roughly; then we'll see how to improve them."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "G0 = 290\n",
-    "k1 = 0.03\n",
-    "k2 = 0.02\n",
-    "k3 = 1e-05"
+    "params = Params(G0 = 290,\n",
+    "                k1 = 0.03,\n",
+    "                k2 = 0.02,\n",
+    "                k3 = 1e-05)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To estimate basal levels, we'll use the concentrations at `t=0`."
+    "Here's a version of `make_system` that takes the parameters and data:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "Gb = data.glucose[0]\n",
-    "Ib = data.insulin[0]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Create the initial condtions."
+    "def make_system(params, data):\n",
+    "    \"\"\"Makes a System object with the given parameters.\n",
+    "    \n",
+    "    params: sequence of G0, k1, k2, k3\n",
+    "    data: DataFrame with `glucose` and `insulin`\n",
+    "    \n",
+    "    returns: System object\n",
+    "    \"\"\"\n",
+    "    G0, k1, k2, k3 = params\n",
+    "    \n",
+    "    Gb = data.glucose[0]\n",
+    "    Ib = data.insulin[0]\n",
+    "    I = interpolate(data.insulin)\n",
+    "    \n",
+    "    t_0 = get_first_label(data)\n",
+    "    t_end = get_last_label(data)\n",
+    "\n",
+    "    init = State(G=G0, X=0)\n",
+    "    \n",
+    "    return System(params,\n",
+    "                  init=init, Gb=Gb, Ib=Ib, I=I,\n",
+    "                  t_0=t_0, t_end=t_end, dt=2)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "init = State(G=G0, X=0)"
+    "system = make_system(params, data)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Make the `System` object."
+    "And here's the update function."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "t_0 = get_first_label(data)\n",
-    "t_end = get_last_label(data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "system = System(init=init, \n",
-    "                k1=k1, k2=k2, k3=k3,\n",
-    "                I=I, Gb=Gb, Ib=Ib,\n",
-    "                t_0=t_0, t_end=t_end, dt=2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +153,9 @@
     "    returns: State object\n",
     "    \"\"\"\n",
     "    G, X = state\n",
-    "    unpack(system)\n",
+    "    k1, k2, k3 = system.k1, system.k2, system.k3 \n",
+    "    I, Ib, Gb = system.I, system.Ib, system.Gb\n",
+    "    dt = system.dt\n",
     "        \n",
     "    dGdt = -k1 * (G - Gb) - X*G\n",
     "    dXdt = k3 * (I(t) - Ib) - k2 * X\n",
@@ -186,8 +167,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Before running the simulation, it is always a good idea to test the update function using the initial conditions.  In this case we can veryify that the results are at least qualitatively correct."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "update_func(system.init, system.t_0, system)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now `run_simulation` is pretty much the same as it always is."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +203,8 @@
     "    \n",
     "    returns: TimeFrame\n",
     "    \"\"\"\n",
-    "    unpack(system)\n",
+    "    init = system.init\n",
+    "    t_0, t_end, dt = system.t_0, system.t_end, system.dt\n",
     "    \n",
     "    frame = TimeFrame(columns=init.index)\n",
     "    frame.row[t_0] = init\n",
@@ -212,12 +217,64 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And here's how we run it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results = run_simulation(system, update_func);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The results are in a `TimeFrame` object with one column per state variable."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%time results = run_simulation(system, update_func);"
+    "results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following plot shows the results of the simulation along with the actual glucose data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "subplot(2, 1, 1)\n",
+    "\n",
+    "plot(results.G, 'b-', label='simulation')\n",
+    "plot(data.glucose, 'bo', label='glucose data')\n",
+    "decorate(ylabel='Concentration (mg/dL)')\n",
+    "\n",
+    "subplot(2, 1, 2)\n",
+    "\n",
+    "plot(results.X, 'C1', label='remote insulin')\n",
+    "\n",
+    "decorate(xlabel='Time (min)', \n",
+    "         ylabel='Concentration (arbitrary units)')\n",
+    "\n",
+    "savefig('figs/chap18-fig01.pdf')"
    ]
   },
   {
@@ -226,19 +283,17 @@
    "source": [
     "### Numerical solution\n",
     "\n",
-    "In the previous chapter, we approximated the differential equations with difference equations, and solved them using `run_simulation`.\n",
+    "Now let's solve the differential equation numerically using `run_ode_solver`, which is an implementation of Ralston's method.\n",
     "\n",
-    "In this chapter, we solve the differential equation numerically using `run_ode_solver`, which is a wrapper for the SciPy ODE solver.\n",
+    "Instead of an update function, we provide a slope function that evaluates the right-hand side of the differential equations.\n",
     "\n",
-    "Instead of an update function, we provide a slope function that evaluates the right-hand side of the differential equations.  We don't have to do the update part; the solver does it for us."
+    "We don't have to do the update part; the solver does it for us."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def slope_func(state, t, system):\n",
@@ -251,7 +306,8 @@
     "    returns: derivatives of G and X\n",
     "    \"\"\"\n",
     "    G, X = state\n",
-    "    unpack(system)\n",
+    "    k1, k2, k3 = system.k1, system.k2, system.k3 \n",
+    "    I, Ib, Gb = system.I, system.Ib, system.Gb\n",
     "    \n",
     "    dGdt = -k1 * (G - Gb) - X*G\n",
     "    dXdt = k3 * (I(t) - Ib) - k2 * X\n",
@@ -268,11 +324,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "slope_func(init, 0, system)"
+    "slope_func(system.init, 0, system)"
    ]
   },
   {
@@ -284,11 +340,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%time results2, details = run_ode_solver(system, slope_func, t_eval=data.index);"
+    "results2, details = run_ode_solver(system, slope_func)"
    ]
   },
   {
@@ -300,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,52 +388,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot(results.G, 'g-')\n",
-    "plot(results2.G, 'b-')\n",
-    "plot(data.glucose, 'bo')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The differences in `G` are less than 1%."
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "diff = results.G - results2.G\n",
-    "percent_diff = diff / results2.G * 100\n",
-    "percent_diff.dropna()"
+    "plot(results.G, 'C0', label='run_simulation')\n",
+    "plot(results2.G, 'C2--', label='run_ode_solver')\n",
+    "\n",
+    "decorate(xlabel='Time (min)', ylabel='Concentration (mg/dL)')\n",
+    "\n",
+    "savefig('figs/chap18-fig02.pdf')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Optimization"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now let's find the parameters that yield the best fit for the data.  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We'll use these values as an initial estimate and iteratively improve them."
+    "The differences in `G` are less than 2%."
    ]
   },
   {
@@ -386,48 +413,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "params = Params(G0 = 290,\n",
-    "                k1 = 0.03,\n",
-    "                k2 = 0.02,\n",
-    "                k3 = 1e-05)"
+    "diff = results.G - results2.G\n",
+    "percent_diff = diff / results2.G * 100\n",
+    "percent_diff"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "max(abs(percent_diff))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`make_system` takes the parameters and actual data and returns a `System` object."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def make_system(params, data):\n",
-    "    \"\"\"Makes a System object with the given parameters.\n",
-    "    \n",
-    "    params: sequence of G0, k1, k2, k3\n",
-    "    data: DataFrame with `glucose` and `insulin`\n",
-    "    \n",
-    "    returns: System object\n",
-    "    \"\"\"\n",
-    "    G0, k1, k2, k3 = params\n",
-    "    \n",
-    "    Gb = data.glucose[0]\n",
-    "    Ib = data.insulin[0]\n",
-    "    \n",
-    "    t_0 = get_first_label(data)\n",
-    "    t_end = get_last_label(data)\n",
+    "### Exercises\n",
     "\n",
-    "    init = State(G=G0, X=0)\n",
-    "    \n",
-    "    return System(G0=G0, k1=k1, k2=k2, k3=k3,\n",
-    "                  init=init, Gb=Gb, Ib=Ib,\n",
-    "                  t_0=t_0, t_end=t_end)"
+    "**Exercise:**  Our solution to the differential equations is only approximate because we used a finite step size, `dt=2` minutes.\n",
+    "\n",
+    "If we make the step size smaller, we expect the solution to be more accurate.  Run the simulation with `dt=1` and compare the results.  What is the largest relative error between the two solutions?"
    ]
   },
   {
@@ -436,58 +444,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "system = make_system(params, data)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "`error_func` takes the parameters and actual data, makes a `System` object, and runs `odeint`, then compares the results to the data.  It returns an array of errors."
+    "# Solution goes here"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def error_func(params, data):\n",
-    "    \"\"\"Computes an array of errors to be minimized.\n",
-    "    \n",
-    "    params: sequence of parameters\n",
-    "    data: DataFrame of values to be matched\n",
-    "    \n",
-    "    returns: array of errors\n",
-    "    \"\"\"\n",
-    "    print(params)\n",
-    "    \n",
-    "    # make a System with the given parameters\n",
-    "    system = make_system(params, data)\n",
-    "    \n",
-    "    # solve the ODE\n",
-    "    results, details = run_ode_solver(system, slope_func, t_eval=data.index)\n",
-    "    \n",
-    "    # compute the difference between the model\n",
-    "    # results and actual data\n",
-    "    errors = results.G - data.glucose\n",
-    "    return errors"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "When we call `error_func`, we provide a sequence of parameters as a single object."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Here's how that works:"
+    "# Solution goes here"
    ]
   },
   {
@@ -496,21 +462,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "error_func(params, data)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "`fit_leastsq` is a wrapper for `scipy.optimize.leastsq`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Here's how we call it."
+    "# Solution goes here"
    ]
   },
   {
@@ -519,135 +471,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "best_params, fit_details = fit_leastsq(error_func, params, data)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The first return value is a `Params` object with the best parameters:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "best_params"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The second return value is a `ModSimSeries` object with information about the results."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fit_details"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fit_details"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now that we have `best_params`, we can use it to make a `System` object and run it."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "system = make_system(best_params, data)\n",
-    "results, details = run_ode_solver(system, slope_func, t_eval=data.index)\n",
-    "details.message"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Here are the results, along with the data.  The first few points of the model don't fit the data, but we don't expect them to."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot(results.G, label='simulation')\n",
-    "plot(data.glucose, 'bo', label='glucose data')\n",
-    "\n",
-    "decorate(xlabel='Time (min)',\n",
-    "         ylabel='Concentration (mg/dL)')\n",
-    "\n",
-    "savefig('figs/chap08-fig04.pdf')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Interpreting parameters\n",
-    "\n",
-    "Based on the parameters of the model, we can estimate glucose effectiveness and insulin sensitivity."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def indices(params):\n",
-    "    \"\"\"Compute glucose effectiveness and insulin sensitivity.\n",
-    "    \n",
-    "    params: sequence of G0, k1, k2, k3\n",
-    "    data: DataFrame with `glucose` and `insulin`\n",
-    "    \n",
-    "    returns: State object containing S_G and S_I\n",
-    "    \"\"\"\n",
-    "    G0, k1, k2, k3 = params\n",
-    "    return State(S_G=k1, S_I=k3/k2)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Here are the results."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "indices(best_params)"
+    "# Solution goes here"
    ]
   },
   {
@@ -656,47 +480,18 @@
    "source": [
     "### Under the hood\n",
     "\n",
-    "Here's the source code for `run_ode_solver` and `fit_leastsq`, if you'd like to know how they work."
+    "Here's the source code for `run_ode_solver` if you'd like to know how it works.\n",
+    "\n",
+    "Notice that `run_ode_solver` is another name for `run_ralston`, which implements [Ralston's method](https://en.wikipedia.org/wiki/List_of_Runge–Kutta_methods)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%psource run_ode_solver"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "%psource fit_leastsq"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Exercises\n",
-    "\n",
-    "**Exercise:** Since we don't expect the first few points to agree, it's probably better not to make them part of the optimization process.  We can ignore them by leaving them out of the `Series` returned by `error_func`.  Modify the last line of `error_func` to return `errors.loc[8:]`, which includes only the elements of the `Series` from `t=8` and up.\n",
-    "\n",
-    "Does that improve the quality of the fit?  Does it change the best parameters by much?\n",
-    "\n",
-    "Note: You can read more about this use of `loc` [in the Pandas documentation](https://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-integer)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Exercise:** How sensitive are the results to the starting guess for the parameters.  If you try different values for the starting guess, do we get the same values for the best parameters?"
+    "source_code(run_ode_solver)"
    ]
   },
   {
@@ -730,7 +525,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
