--- a/code/chap20.ipynb
+++ b/code/chap20.ipynb
@@ -16,9 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Configure Jupyter so figures appear in the notebook\n",
@@ -43,9 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "m = UNITS.meter\n",
@@ -81,9 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "g = 9.8 * m/s**2"
@@ -93,9 +87,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When we call `odeint`, we need an array of timestamps where we want to compute the solution.\n",
-    "\n",
-    "I'll start with a duration of 10 seconds."
+    "I'll start with a duration of 10 seconds and step size 0.1 second."
    ]
   },
   {
@@ -108,6 +100,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dt = 0.1 * s"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -116,13 +117,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "system = System(init=init, g=g, t_end=t_end)"
+    "system = System(init=init, g=g, t_end=t_end, dt=dt)"
    ]
   },
   {
@@ -134,10 +133,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def slope_func(state, t, system):\n",
@@ -150,7 +147,7 @@
     "    returns: derivatives of y and v\n",
     "    \"\"\"\n",
     "    y, v = state\n",
-    "    unpack(system)    \n",
+    "    g = system.g    \n",
     "\n",
     "    dydt = v\n",
     "    dvdt = -g\n",
@@ -167,11 +164,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dydt, dvdt = slope_func(init, 0, system)\n",
+    "dydt, dvdt = slope_func(system.init, 0, system)\n",
     "print(dydt)\n",
     "print(dvdt)"
    ]
@@ -185,14 +182,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "results, details = run_ode_solver(system, slope_func, max_step=0.5*s)\n",
-    "details.message"
+    "results, details = run_ode_solver(system, slope_func)\n",
+    "details"
    ]
   },
   {
@@ -204,13 +199,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "results"
+    "results.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results.tail()"
    ]
   },
   {
@@ -222,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +234,7 @@
     "             ylabel='Position (m)')\n",
     "\n",
     "plot_position(results)\n",
-    "savefig('figs/chap09-fig01.pdf')"
+    "savefig('figs/chap20-fig01.pdf')"
    ]
   },
   {
@@ -246,10 +248,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
     "t_crossings = crossings(results.y, 0)"
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +301,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The estimate is accurate to about 10 decimal places."
+    "The estimate is accurate to about 9 decimal places."
    ]
   },
   {
@@ -317,10 +317,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 17,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def event_func(state, t, system):\n",
@@ -339,10 +337,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 18,
+   "metadata": {},
    "outputs": [],
    "source": [
     "results, details = run_ode_solver(system, slope_func, events=event_func)\n",
@@ -360,11 +356,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "results"
+    "results.tail()"
    ]
   },
   {
@@ -378,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,36 +385,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Unfortunately, `run_ode_solver` does not carry the units through the computation, so we have to put them back at the end.\n",
-    "\n",
-    "We could also get the time of the event from `details`, but it's a minor nuisance because it comes packed in an array:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "details.t_events[0][0] * s"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The result is accurate to about 15 decimal places.\n",
+    "The result is accurate to about 4 decimal places.\n",
     "\n",
     "We can also check the velocity of the penny when it hits the sidewalk:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "v_sidewalk = get_last_value(results.v) * m / s"
+    "v_sidewalk = get_last_value(results.v)"
    ]
   },
   {
@@ -430,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,20 +437,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%psource crossings"
+    "source_code(crossings)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The [documentation of InterpolatedUnivariateSpline is here](https://docs.scipy.org/doc/scipy/reference/generated/scipy.interpolate.InterpolatedUnivariateSpline.html).\n",
-    "\n",
-    "And you can read the [documentation of `scipy.integrate.solve_ivp`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.integrate.solve_ivp.html) to learn more about how `run_ode_solver` works."
+    "The [documentation of InterpolatedUnivariateSpline is here](https://docs.scipy.org/doc/scipy/reference/generated/scipy.interpolate.InterpolatedUnivariateSpline.html)."
    ]
   },
   {
@@ -498,15 +474,6 @@
     "If you read the reply by Dave Rothstein, you will see other ways to solve the problem, and a good discussion of the modeling decisions behind them.\n",
     "\n",
     "You might also be interested to know that [it's actually not that easy to get to the Sun](https://www.theatlantic.com/science/archive/2018/08/parker-solar-probe-launch-nasa/567197/)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Solution goes here"
    ]
   },
   {
@@ -668,7 +635,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
