--- a/code/chap22.ipynb
+++ b/code/chap22.ipynb
@@ -16,9 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Configure Jupyter so figures appear in the notebook\n",
@@ -52,9 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "m = UNITS.meter\n",
@@ -72,9 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "A = Vector(3, 4) * m"
@@ -147,9 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "B = Vector(1, 2) * m"
@@ -212,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,10 +220,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [],
    "source": [
     "mag = A.mag\n",
@@ -249,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,10 +306,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 18,
+   "metadata": {},
    "outputs": [],
    "source": [
     "degree = UNITS.degree\n",
@@ -335,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,12 +438,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 26,
+   "metadata": {},
    "outputs": [],
    "source": [
+    "t_end = 10 * s\n",
+    "dt = t_end / 100\n",
+    "\n",
     "params = Params(x = 0 * m, \n",
     "                y = 1 * m,\n",
     "                g = 9.8 * m/s**2,\n",
@@ -465,7 +454,7 @@
     "                C_d = 0.33,\n",
     "                angle = 45 * degree,\n",
     "                velocity = 40 * m / s,\n",
-    "                t_end = 10 * s)"
+    "                t_end=t_end, dt=dt)"
    ]
   },
   {
@@ -477,10 +466,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 27,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def make_system(params):\n",
@@ -491,7 +478,7 @@
     "               \n",
     "    returns: System object\n",
     "    \"\"\"\n",
-    "    unpack(params)\n",
+    "    angle, velocity = params.angle, params.velocity\n",
     "    \n",
     "    # convert angle to degrees\n",
     "    theta = np.deg2rad(angle)\n",
@@ -500,9 +487,12 @@
     "    vx, vy = pol2cart(theta, velocity)\n",
     "    \n",
     "    # make the initial state\n",
-    "    init = State(x=x, y=y, vx=vx, vy=vy)\n",
+    "    R = Vector(params.x, params.y)\n",
+    "    V = Vector(vx, vy)\n",
+    "    init = State(R=R, V=V)\n",
     "    \n",
     "    # compute area from diameter\n",
+    "    diameter = params.diameter\n",
     "    area = np.pi * (diameter/2)**2\n",
     "    \n",
     "    return System(params, init=init, area=area)"
@@ -517,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,21 +523,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def drag_force(v, system):\n",
+    "def drag_force(V, system):\n",
     "    \"\"\"Computes drag force in the opposite direction of `v`.\n",
     "    \n",
-    "    v: velocity Vector\n",
+    "    V: velocity Vector\n",
     "    system: System object with rho, C_d, area\n",
     "    \n",
     "    returns: Vector drag force\n",
     "    \"\"\"\n",
-    "    unpack(system)\n",
-    "    mag = -rho * v.mag**2 * C_d * area / 2\n",
-    "    direction = v.hat()\n",
+    "    rho, C_d, area = system.rho, system.C_d, system.area\n",
+    "    \n",
+    "    mag = -rho * V.mag**2 * C_d * area / 2\n",
+    "    direction = V.hat()\n",
     "    f_drag = direction * mag\n",
     "    return f_drag"
    ]
@@ -561,12 +552,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "v_test = Vector(10, 10) * m/s\n",
-    "drag_force(v_test, system)"
+    "V_test = Vector(10, 10) * m/s\n",
+    "drag_force(V_test, system)"
    ]
   },
   {
@@ -578,10 +569,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 31,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def slope_func(state, t, system):\n",
@@ -593,16 +582,15 @@
     "    \n",
     "    returns: sequence (vx, vy, ax, ay)\n",
     "    \"\"\"\n",
-    "    x, y, vx, vy = state\n",
-    "    unpack(system)\n",
-    "\n",
-    "    v = Vector(vx, vy)    \n",
-    "    a_drag = drag_force(v, system) / mass\n",
+    "    R, V = state\n",
+    "    mass, g = system.mass, system.g\n",
+    "    \n",
+    "    a_drag = drag_force(V, system) / mass\n",
     "    a_grav = Vector(0, -g)\n",
     "    \n",
-    "    a = a_grav + a_drag\n",
+    "    A = a_grav + a_drag\n",
     "    \n",
-    "    return vx, vy, a.x, a.y"
+    "    return V, A"
    ]
   },
   {
@@ -614,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -630,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -643,13 +631,13 @@
     "    \n",
     "    returns: y coordinate\n",
     "    \"\"\"\n",
-    "    x, y, vx, vy = state\n",
-    "    return y"
+    "    R, V = state\n",
+    "    return R.y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -665,13 +653,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 35,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "results, details = run_ode_solver(system, slope_func, events=event_func, max_step=0.2*s)\n",
+    "results, details = run_ode_solver(system, slope_func, events=event_func)\n",
     "details"
    ]
   },
@@ -684,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,11 +686,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_dist = get_last_value(results.x) * m"
+    "R_final = get_last_value(results.R)\n",
+    "x_dist = R_final.x"
    ]
   },
   {
@@ -718,17 +705,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot(results.x, label='x')\n",
-    "plot(results.y, label='y')\n",
+    "x = results.R.extract('x')\n",
+    "y = results.R.extract('y')\n",
+    "\n",
+    "x.plot()\n",
+    "y.plot()\n",
     "\n",
     "decorate(xlabel='Time (s)',\n",
     "         ylabel='Position (m)')\n",
     "\n",
-    "savefig('figs/chap10-fig01.pdf')"
+    "savefig('figs/chap22-fig01.pdf')"
    ]
   },
   {
@@ -740,12 +730,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot(results.vx, label='vx')\n",
-    "plot(results.vy, label='vy')\n",
+    "vx = results.V.extract('x')\n",
+    "vy = results.V.extract('y')\n",
+    "\n",
+    "vx.plot(label='vx')\n",
+    "vy.plot(label='vy')\n",
     "\n",
     "decorate(xlabel='Time (s)',\n",
     "         ylabel='Velocity (m/s)')"
@@ -764,18 +757,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "def plot_trajectory(results):\n",
-    "    plot(results.x, results.y, label='trajectory')\n",
+    "    x = results.R.extract('x')\n",
+    "    y = results.R.extract('y')\n",
+    "    plot(x, y, color='C2', label='trajectory')\n",
     "\n",
     "    decorate(xlabel='x position (m)',\n",
     "             ylabel='y position (m)')\n",
     "\n",
     "plot_trajectory(results)\n",
-    "savefig('figs/chap10-fig02.pdf')"
+    "savefig('figs/chap22-fig02.pdf')"
    ]
   },
   {
@@ -789,12 +784,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "v = Vector(3, 4)\n",
-    "type(v)"
+    "V = Vector(3, 4)\n",
+    "type(V)"
    ]
   },
   {
@@ -806,36 +801,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "isinstance(v, Quantity)"
+    "isinstance(V, Quantity)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There's one gotcha you might run into with Vectors and Quantities.  If you multiply a `Vector` and a `Quantity`, you get a `Vector`:"
+    "There's one gotcha you might run into with Vectors and Quantities.  If you multiply a `ModSimVector` and a `Quantity`, you get a `ModSimVector`:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "v1 = v * m"
+    "V1 = V * m"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
-    "type(v1)"
+    "type(V1)"
    ]
   },
   {
@@ -847,36 +842,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "v2 = m * v"
+    "V2 = m * V"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
-    "type(v2)"
+    "type(V2)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With a `Vector` you can get the coordinates using dot notation, as well as `mag`, `mag2`, and `angle`:"
+    "With a `ModSimVector` you can get the coordinates using dot notation, as well as `mag`, `mag2`, and `angle`:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
-    "v1.x, v1.y, v1.mag, v1.angle"
+    "V1.x, V1.y, V1.mag, V1.angle"
    ]
   },
   {
@@ -888,11 +883,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
-    "v2[0], v2[1]"
+    "V2[0], V2[1]"
    ]
   },
   {
@@ -904,18 +899,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
-    "vector_mag(v2), vector_angle(v2)"
+    "vector_mag(V2), vector_angle(V2)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And often you can avoid the whole issue by doing the multiplication with the `Vector` on the left."
+    "And often you can avoid the whole issue by doing the multiplication with the `ModSimVector` on the left."
    ]
   },
   {
@@ -929,30 +924,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Exercise:** Run the simulation for a few different launch angles and visualize the results.  Are they consistent with your expectations?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Exercise:** The baseball stadium in Denver, Colorado is 1,580 meters above sea level, where the density of air is about 1.0 kg / meter$^3$.  How much farther would a ball hit with the same velocity and launch angle travel?\n",
-    "\n",
-    "Hint: create a new `Params` object like this:"
+    "**Exercise:** Run the simulation with and without air resistance.  How wrong would we be if we ignored drag?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
-    "params2 = Params(params, rho=1*kg/m**3)"
+    "# Hint\n",
+    "\n",
+    "system_no_drag = System(system, C_d=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -961,7 +949,70 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solution goes here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solution goes here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solution goes here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solution goes here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Exercise:** The baseball stadium in Denver, Colorado is 1,580 meters above sea level, where the density of air is about 1.0 kg / meter$^3$.  How much farther would a ball hit with the same velocity and launch angle travel?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Hint\n",
+    "\n",
+    "system2 = System(system, rho=1.0*kg/m**3)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solution goes here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -982,11 +1033,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Solution goes here"
+    "baseball_drag = pd.read_csv('data/baseball_drag.csv')\n",
+    "mph = Quantity(baseball_drag['Velocity in mph'], UNITS.mph)\n",
+    "mps = mph.to(m/s)\n",
+    "baseball_drag.index = magnitude(mps)\n",
+    "baseball_drag.index.name = 'Velocity in meters per second'\n",
+    "baseball_drag"
    ]
   },
   {
@@ -998,7 +1054,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solution goes here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1011,7 +1076,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Solution goes here"
+    "C_d = drag_interp(43 * m / s)"
    ]
   },
   {
@@ -1061,6 +1126,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solution goes here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solution goes here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solution goes here"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -1083,7 +1175,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
