--- a/code/chap23.ipynb
+++ b/code/chap23.ipynb
@@ -16,9 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Configure Jupyter so figures appear in the notebook\n",
@@ -53,11 +51,12 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
+    "t_end = 20 * s\n",
+    "dt = t_end / 100\n",
+    "\n",
     "params = Params(x = 0 * m, \n",
     "                y = 1 * m,\n",
     "                g = 9.8 * m/s**2,\n",
@@ -67,15 +66,14 @@
     "                C_d = 0.3,\n",
     "                angle = 45 * degree,\n",
     "                velocity = 40 * m / s,\n",
-    "                t_end = 20 * s)"
+    "                t_end=t_end,\n",
+    "                dt=dt)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def make_system(params):\n",
@@ -86,7 +84,7 @@
     "               \n",
     "    returns: System object\n",
     "    \"\"\"\n",
-    "    unpack(params)\n",
+    "    angle, velocity = params.angle, params.velocity\n",
     "    \n",
     "    # convert angle to degrees\n",
     "    theta = np.deg2rad(angle)\n",
@@ -95,9 +93,12 @@
     "    vx, vy = pol2cart(theta, velocity)\n",
     "    \n",
     "    # make the initial state\n",
-    "    init = State(x=x, y=y, vx=vx, vy=vy)\n",
+    "    R = Vector(params.x, params.y)\n",
+    "    V = Vector(vx, vy)\n",
+    "    init = State(R=R, V=V)\n",
     "    \n",
     "    # compute area from diameter\n",
+    "    diameter = params.diameter\n",
     "    area = np.pi * (diameter/2)**2\n",
     "    \n",
     "    return System(params, init=init, area=area)"
@@ -109,27 +110,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def drag_force(V, system):\n",
-    "    \"\"\"Computes drag force in the opposite direction of `V`.\n",
+    "def drag_force(v, system):\n",
+    "    \"\"\"Computes drag force in the opposite direction of `v`.\n",
     "    \n",
-    "    V: velocity\n",
+    "    v: velocity Vector\n",
     "    system: System object with rho, C_d, area\n",
     "    \n",
     "    returns: Vector drag force\n",
     "    \"\"\"\n",
-    "    unpack(system)\n",
-    "    mag = -rho * V.mag**2 * C_d * area / 2\n",
-    "    direction = V.hat()\n",
-    "    f_drag = mag * direction\n",
+    "    rho, C_d, area = system.rho, system.C_d, system.area\n",
+    "    \n",
+    "    mag = -rho * v.mag**2 * C_d * area / 2\n",
+    "    direction = v.hat()\n",
+    "    f_drag = direction * mag\n",
     "    return f_drag"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def slope_func(state, t, system):\n",
@@ -141,16 +141,15 @@
     "    \n",
     "    returns: sequence (vx, vy, ax, ay)\n",
     "    \"\"\"\n",
-    "    x, y, vx, vy = state\n",
-    "    unpack(system)\n",
-    "\n",
-    "    V = Vector(vx, vy)    \n",
+    "    R, V = state\n",
+    "    mass, g = system.mass, system.g\n",
+    "    \n",
     "    a_drag = drag_force(V, system) / mass\n",
     "    a_grav = Vector(0, -g)\n",
     "    \n",
-    "    a = a_grav + a_drag\n",
+    "    A = a_grav + a_drag\n",
     "    \n",
-    "    return vx, vy, a.x, a.y"
+    "    return V, A"
    ]
   },
   {
@@ -168,8 +167,8 @@
     "    \n",
     "    returns: y coordinate\n",
     "    \"\"\"\n",
-    "    x, y, vx, vy = state\n",
-    "    return y"
+    "    R, V = state\n",
+    "    return R.y"
    ]
   },
   {
@@ -184,9 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def range_func(angle, params):  \n",
@@ -200,7 +197,8 @@
     "    params = Params(params, angle=angle)\n",
     "    system = make_system(params)\n",
     "    results, details = run_ode_solver(system, slope_func, events=event_func)\n",
-    "    x_dist = get_last_value(results.x) * m\n",
+    "    x_dist = get_last_value(results.R).x\n",
+    "    print(angle, x_dist)\n",
     "    return x_dist"
    ]
   },
@@ -217,7 +215,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%time range_func(45, params)"
+    "range_func(45, params)"
    ]
   },
   {
@@ -238,7 +236,6 @@
     "\n",
     "for angle in angles:\n",
     "    x_dist = range_func(angle, params)\n",
-    "    print(angle, x_dist)\n",
     "    sweep[angle] = x_dist"
    ]
   },
@@ -261,14 +258,14 @@
     "         title='Range as a function of launch angle',\n",
     "         legend=False)\n",
     "\n",
-    "savefig('figs/chap10-fig03.pdf')"
+    "savefig('figs/chap23-fig01.pdf')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can use `max_bounded` to search for the peak efficiently."
+    "We can use `maximize` to search for the peak efficiently."
    ]
   },
   {
@@ -277,7 +274,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%time res = max_bounded(range_func, [0, 90], params)"
+    "bounds = [0, 90] * degree\n",
+    "res = maximize(range_func, bounds, params)"
    ]
   },
   {
@@ -309,7 +307,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "optimal_angle = res.x * degree"
+    "optimal_angle = res.x"
    ]
   },
   {
@@ -327,9 +325,9 @@
    "source": [
     "### Under the hood\n",
     "\n",
-    "Read the source code for `max_bounded` and `min_bounded`, below.\n",
+    "Read the source code for `maximize` and `minimize_scalar`, below.\n",
     "\n",
-    "Add a print statement to `range_func` that prints `angle`.  Then run `max_bounded` again so you can see how many times it calls `range_func` and what the arguments are."
+    "Add a print statement to `range_func` that prints `angle`.  Then run `maximize` again so you can see how many times it calls `range_func` and what the arguments are."
    ]
   },
   {
@@ -338,7 +336,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%psource max_bounded"
+    "source_code(maximize)"
    ]
   },
   {
@@ -347,7 +345,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%psource min_bounded"
+    "source_code(minimize_scalar)"
    ]
   },
   {
@@ -374,9 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Solution goes here"
@@ -401,9 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Solution goes here"
@@ -429,7 +423,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now use `max_bounded` to find the optimal angle.  Is it higher or lower than the angle that maximizes range?"
+    "Now use `maximize` to find the optimal angle.  Is it higher or lower than the angle that maximizes range?"
    ]
   },
   {
@@ -474,17 +468,15 @@
    "source": [
     "### Finding the minimum velocity\n",
     "\n",
-    "Even though we are finding the \"minimum\" velocity, we are not really solving a minimization problem.  Rather, we want to find the velocity that makes the height at the wall exactly 11 m, given given that it's launched at the optimal angle.  And that's a job for `fsolve`.\n",
+    "Even though we are finding the \"minimum\" velocity, we are not really solving a minimization problem.  Rather, we want to find the velocity that makes the height at the wall exactly 11 m, given given that it's launched at the optimal angle.  And that's a job for `root_bisect`.\n",
     "\n",
-    "Write an error function that takes a velocity and a `Params` object as parameters.  It should use `max_bounded` to find the highest possible height of the ball at the wall, for the given velocity.  Then it should return the difference between that optimal height and 11 meters."
+    "Write an error function that takes a velocity and a `Params` object as parameters.  It should use `maximize` to find the highest possible height of the ball at the wall, for the given velocity.  Then it should return the difference between that optimal height and 11 meters."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Solution goes here"
@@ -494,7 +486,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Test your error function before you call `fsolve`."
+    "Test your error function before you call `root_bisect`."
    ]
   },
   {
@@ -510,7 +502,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Then use `fsolve` to find the answer to the problem, the minimum velocity that gets the ball out of the park."
+    "Then use `root_bisect` to find the answer to the problem, the minimum velocity that gets the ball out of the park."
    ]
   },
   {
@@ -546,6 +538,13 @@
    "source": [
     "# Solution goes here"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -564,7 +563,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
