--- a/code/filter.ipynb
+++ b/code/filter.ipynb
@@ -110,29 +110,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Normally I would recommend running this computation with units, but for this example it turns out to be too slow.\n",
-    "\n",
-    "Here's  a `Params` object with no units."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "params = Params(\n",
-    "    R1 = 1e6,   # ohm\n",
-    "    C1 = 1e-9,  # farad\n",
-    "    A = 5,      # volt\n",
-    "    f = 1000,   # Hz\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Now we can pass the `Params` object `make_system` which computes some additional parameters and defines `init`.\n",
     "\n",
     "* `omega` is the frequency of the input signal in radians/second.\n",
@@ -146,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,18 +134,17 @@
     "    \n",
     "    returns: System object\n",
     "    \"\"\"\n",
-    "    unpack(params)\n",
+    "    f, R1, C1 = params.f, params.R1, params.C1\n",
     "    \n",
     "    init = State(V_out = 0)\n",
     "    omega = 2 * np.pi * f\n",
     "    tau = R1 * C1\n",
     "    cutoff = 1 / R1 / C1 / 2 / np.pi\n",
     "    t_end = 4 / f\n",
-    "    ts = linspace(0, t_end, 401)\n",
+    "    dt = t_end / 4000\n",
     "    \n",
-    "    return System(R1=R1, C1=C1, A=A, f=f,\n",
-    "                  init=init, t_end=t_end, ts=ts,\n",
-    "                  omega=omega, tau=tau, cutoff=cutoff)"
+    "    return System(params, init=init, t_end=t_end, dt=dt,\n",
+    "                  omega=omega, tau=tau, cutoff=cutoff.to(Hz))"
    ]
   },
   {
@@ -180,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,12 +167,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Exercise:** Write a slope function that takes as an input a `State` object that contains `V_out`, and returns the derivative of `V_out`."
+    "**Exercise:** Write a slope function that takes as an input a `State` object that contains `V_out`, and returns the derivative of `V_out`.\n",
+    "\n",
+    "Note: The ODE solver requires the return value from slope_func to be a sequence, even if there is only one element.  The simplest way to do that is to return a list with a single element:\n",
+    "\n",
+    "```\n",
+    "    return [dV_out_dt]\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,11 +194,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "slope_func(system.init, 0, system)"
+    "slope_func(system.init, 0*UNITS.s, system)"
    ]
   },
   {
@@ -228,12 +210,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
-    "results, details = run_ode_solver(system, slope_func, t_eval=system.ts)\n",
+    "results, details = run_ode_solver(system, slope_func)\n",
     "details"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results.head()"
    ]
   },
   {
@@ -245,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,11 +283,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fs = [1, 10, 100, 1000, 10000, 100000]\n",
+    "fs = [1, 10, 100, 1000, 10000, 100000] * Hz\n",
     "\n",
     "for i, f in enumerate(fs):\n",
     "    system = make_system(Params(params, f=f))\n",
-    "    results, details = run_ode_solver(system, slope_func, t_eval=system.ts)\n",
+    "    results, details = run_ode_solver(system, slope_func)\n",
     "    subplot(3, 2, i+1)\n",
     "    plot_results(results)"
    ]
@@ -325,8 +316,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "system = make_system(Params(params, f=1000))\n",
-    "results, details = run_ode_solver(system, slope_func, t_eval=system.ts)\n",
+    "system = make_system(Params(params, f=1000*Hz))\n",
+    "results, details = run_ode_solver(system, slope_func)\n",
     "V_out = results.V_out\n",
     "plot_results(results)"
    ]
@@ -352,8 +343,10 @@
     "    \n",
     "    returns: TimeSeries\n",
     "    \"\"\"\n",
-    "    unpack(system)\n",
-    "    V_in = A * np.cos(omega * results.index)\n",
+    "    A, omega = system.A, system.omega\n",
+    "    \n",
+    "    ts = results.index.values * UNITS.second\n",
+    "    V_in = A * np.cos(omega * ts)\n",
     "    return TimeSeries(V_in, results.index, name='V_in')"
    ]
   },
@@ -451,6 +444,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ratio.to_base_units()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -459,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,13 +497,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "corr = np.correlate(V_out, V_in, mode='same')\n",
+    "corr = correlate(V_out, V_in, mode='same')\n",
     "corr = TimeSeries(corr, V_in.index)\n",
-    "plot(corr, color='C5')\n",
+    "plot(corr, color='C4')\n",
     "decorate(xlabel='Lag (s)',\n",
     "         ylabel='Correlation')"
    ]
@@ -515,11 +517,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "peak_time = corr.idxmax()"
+    "peak_time = corr.idxmax() * UNITS.second"
    ]
   },
   {
@@ -531,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,11 +542,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "peak_time / period"
+    "(peak_time / period).to_reduced_units()"
    ]
   },
   {
@@ -556,12 +558,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "frac, whole = np.modf(peak_time / period)\n",
-    "frac"
+    "frac = frac.to_reduced_units()"
    ]
   },
   {
@@ -573,11 +575,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "frac * 360"
+    "frac * 360 * UNITS.degree"
    ]
   },
   {
@@ -591,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -607,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -629,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -645,16 +647,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fs = 10 ** linspace(0, 4, 9)"
+    "fs = 10 ** linspace(0, 4, 9) * Hz"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -670,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -688,14 +690,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "def plot_ratios(ratios, system):\n",
     "    \"\"\"Plot output ratios.\n",
     "    \"\"\"\n",
-    "    plt.axvline(system.cutoff, color='gray', alpha=0.4)\n",
+    "    # axvline can't handle a Quantity with units\n",
+    "    cutoff = magnitude(system.cutoff)\n",
+    "    plt.axvline(cutoff, color='gray', alpha=0.4)\n",
+    "    \n",
     "    plot(ratios, color='C2', label='output ratio')\n",
     "    decorate(xlabel='Frequency (Hz)',\n",
     "             ylabel='$V_{out} / V_{in}$',\n",
@@ -704,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -722,14 +727,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "def plot_offsets(offsets, system):\n",
     "    \"\"\"Plot phase offsets.\n",
     "    \"\"\"\n",
-    "    plt.axvline(system.cutoff, color='gray', alpha=0.4)\n",
+    "    # axvline can't handle a Quantity with units\n",
+    "    cutoff = magnitude(system.cutoff)\n",
+    "    plt.axvline(cutoff, color='gray', alpha=0.4)\n",
+    "    \n",
     "    plot(offsets, color='C9')\n",
     "    decorate(xlabel='Frequency (Hz)',\n",
     "             ylabel='Phase offset (degree)',\n",
@@ -738,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -771,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -783,15 +791,6 @@
    "metadata": {},
    "source": [
     "Test your function:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "A = output_ratios(fs, system)"
    ]
   },
   {
@@ -800,6 +799,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "A = output_ratios(fs, system)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Solution goes here"
    ]
   },
@@ -812,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -828,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -838,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -884,7 +892,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
