--- a/code/kitten.ipynb
+++ b/code/kitten.ipynb
@@ -16,9 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Configure Jupyter so figures appear in the notebook\n",
@@ -56,9 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "radian = UNITS.radian\n",
@@ -78,9 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "params = Params(Rmin = 0.02 * m,\n",
@@ -102,9 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def make_system(params):\n",
@@ -116,7 +108,8 @@
     "    returns: System with init, k, rho_h, Rmin, Rmax,\n",
     "                         Mcore, Mroll, ts\n",
     "    \"\"\"\n",
-    "    unpack(params)\n",
+    "    L, Rmax, Rmin = params.L, params.Rmax, params.Rmin\n",
+    "    Mroll = params.Mroll\n",
     "    \n",
     "    init = State(theta = 0 * radian,\n",
     "                 omega = 0 * radian/s,\n",
@@ -126,10 +119,7 @@
     "    rho_h = Mroll / area\n",
     "    k = (Rmax**2 - Rmin**2) / 2 / L / radian    \n",
     "    \n",
-    "    return System(init=init, k=k, rho_h=rho_h,\n",
-    "                  Rmin=Rmin, Rmax=Rmax,\n",
-    "                  Mcore=Mcore, Mroll=Mroll, \n",
-    "                  t_end=t_end)"
+    "    return System(params, init=init, area=area, rho_h=rho_h, k=k)"
    ]
   },
   {
@@ -167,9 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def moment_of_inertia(r, system):\n",
@@ -180,7 +168,8 @@
     "    \n",
     "    returns: moment of inertia in kg m**2\n",
     "    \"\"\"\n",
-    "    unpack(system)\n",
+    "    Mcore, Rmin, rho_h = system.Mcore, system.Rmin, system.rho_h\n",
+    "    \n",
     "    Icore = Mcore * Rmin**2   \n",
     "    Iroll = pi * rho_h / 2 * (r**4 - Rmin**4)\n",
     "    return Icore + Iroll"
@@ -244,9 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Solution goes here"
@@ -278,9 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Solution goes here"
@@ -326,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,6 +366,13 @@
     "    \n",
     "plot_y(results)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -399,7 +391,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
