--- a/code/oem.ipynb
+++ b/code/oem.ipynb
@@ -16,9 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Configure Jupyter so figures appear in the notebook\n",
@@ -72,9 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "radian = UNITS.radian\n",
@@ -98,9 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "params = Params(r_wheel=0.26 * m,\n",
@@ -122,9 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def make_system(params):\n",
@@ -134,8 +126,6 @@
     "    \n",
     "    returns: System object\n",
     "    \"\"\"\n",
-    "    unpack(params)\n",
-    "    \n",
     "    init = State(x=0*m, v=0*m/s)\n",
     "    \n",
     "    rpms = [0, 2000, 5000]\n",
@@ -183,16 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "system.interpolate_torque"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,14 +185,14 @@
     "    \n",
     "    returns: torque in Nm\n",
     "    \"\"\"\n",
-    "    unpack(system)\n",
-    "    x = omega.to(rpm)\n",
+    "    factor = (1 * radian / s).to(rpm)\n",
+    "    x = magnitude(omega * factor)\n",
     "    return system.interpolate_torque(x) * N * m"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,11 +218,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "xs = linspace(0, 5000, 21) * rpm\n",
+    "xs = linspace(0, 525, 21) * radian / s\n",
     "taus = [compute_torque(x, system) for x in xs]\n",
     "plot(xs, taus)\n",
     "decorate(xlabel='Motor speed (rpm)',\n",
@@ -259,10 +240,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def slope_func(state, t, system):\n",
@@ -275,10 +254,11 @@
     "    returns: sequence of derivatives\n",
     "    \"\"\"\n",
     "    x, v = state\n",
-    "    unpack(system)\n",
+    "    r_wheel, speed_ratio = system.r_wheel, system.speed_ratio\n",
+    "    mass = system.mass\n",
     "    \n",
     "    # use velocity, v, to compute angular velocity of the wheel\n",
-    "    omega2 = v / r_wheel * radian\n",
+    "    omega2 = v / r_wheel\n",
     "    \n",
     "    # use the speed ratio to compute motor speed\n",
     "    omega1 = omega2 / speed_ratio\n",
@@ -294,7 +274,7 @@
     "    \n",
     "    # compute acceleration\n",
     "    a = F/mass\n",
-    "    \n",
+    "\n",
     "    return v, a      "
    ]
   },
@@ -307,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,13 +312,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 18,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "results, details = run_ode_solver(system, slope_func, max_step=0.3*s)\n",
+    "results, details = run_ode_solver(system, slope_func)\n",
     "details"
    ]
   },
@@ -351,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,16 +345,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "v_final = get_last_value(results.v) * m/s"
+    "v_final = get_last_value(results.v)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,20 +428,21 @@
     "    returns: difference from 100 km/hour\n",
     "    \"\"\"\n",
     "    x, v = state\n",
-    "    unpack(system)\n",
     "    \n",
-    "    v = v * m/s\n",
+    "    # convert to km/hour\n",
+    "    factor = (1 * m/s).to(km/hour)\n",
+    "    v = magnitude(v * factor)\n",
     "    \n",
-    "    return v.to(km/hour) - 100 * km/hour     "
+    "    return v - 100     "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "results, details = run_ode_solver(system, slope_func, max_step=0.2*s, events=event_func)\n",
+    "results, details = run_ode_solver(system, slope_func, events=event_func)\n",
     "details"
    ]
   },
@@ -476,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,12 +493,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x, v = get_last_value(results)\n",
-    "state = State(x=x*m, v=v*m/s)"
+    "state = results.last_row()"
    ]
   },
   {
@@ -531,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -592,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,7 +582,8 @@
     "    \n",
     "    returns: drag force\n",
     "    \"\"\"\n",
-    "    unpack(system)\n",
+    "    rho, C_d, area = system.rho, system.C_d, system.area\n",
+    "    \n",
     "    f_drag = -np.sign(v) * rho * v**2 * C_d * area / 2\n",
     "    return f_drag"
    ]
@@ -618,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -634,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -652,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -666,7 +645,8 @@
     "    returns: sequence of derivatives\n",
     "    \"\"\"\n",
     "    x, v = state\n",
-    "    unpack(system)\n",
+    "    r_wheel, speed_ratio = system.r_wheel, system.speed_ratio\n",
+    "    mass = system.mass\n",
     "    \n",
     "    omega2 = v / r_wheel * radian\n",
     "    omega1 = omega2 / speed_ratio\n",
@@ -689,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -706,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -722,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -754,7 +734,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "system.set(unit_rr = 1 * N / kg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -765,8 +754,7 @@
     "    \n",
     "    returns: force\n",
     "    \"\"\"\n",
-    "    unpack(system)\n",
-    "    return -C_rr * mass * N/kg"
+    "    return -system.C_rr * system.mass * system.unit_rr"
    ]
   },
   {
@@ -778,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -787,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -803,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -817,7 +805,8 @@
     "    returns: sequence of derivatives\n",
     "    \"\"\"\n",
     "    x, v = state\n",
-    "    unpack(system)\n",
+    "    r_wheel, speed_ratio = system.r_wheel, system.speed_ratio\n",
+    "    mass = system.mass\n",
     "    \n",
     "    omega2 = v / r_wheel * radian\n",
     "    omega1 = omega2 / speed_ratio\n",
@@ -841,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -858,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -867,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -901,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -915,8 +904,10 @@
     "    \"\"\"\n",
     "    params = Params(params, speed_ratio=speed_ratio)\n",
     "    system = make_system(params)\n",
+    "    system.set(unit_rr = 1 * N / kg)\n",
+    "    \n",
     "    results, details = run_ode_solver(system, slope_func3, events=event_func)\n",
-    "    t_final = get_last_label(results) * s\n",
+    "    t_final = get_last_label(results)\n",
     "    a_initial = slope_func(system.init, 0, system)\n",
     "    return t_final"
    ]
@@ -930,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -946,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -965,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -992,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1009,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1040,7 +1031,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
