--- a/code/salmon.ipynb
+++ b/code/salmon.ipynb
@@ -18,9 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Configure Jupyter so figures appear in the notebook\n",
@@ -90,7 +88,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pop_series = TimeSeries(pops, index=years, dtype=float)"
+    "pop_series = TimeSeries(pops, index=years, dtype=np.float64)"
    ]
   },
   {
@@ -122,9 +120,7 @@
    "source": [
     "## Modeling changes\n",
     "\n",
-    "To see how the population changes from year-to-year, I'll use `diff` to compute the absolute difference between each year and the next.\n",
-    "\n",
-    "`shift` adjusts the result so each change aligns with the year it happened."
+    "To see how the population changes from year-to-year, I'll use `ediff1d` to compute the absolute difference between each year and the next.\n"
    ]
   },
   {
@@ -133,7 +129,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "abs_diffs = np.ediff1d(pop_series, np.nan)"
+    "abs_diffs = np.ediff1d(pop_series, to_end=0)"
    ]
   },
   {
@@ -172,7 +168,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "These relative differences are observed annual net growth rates.  So let's drop the `NaN` and save them."
+    "These relative differences are observed annual net growth rates.  So let's drop the `0` and save them."
    ]
   },
   {
@@ -181,7 +177,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rates = rel_diffs.dropna()"
+    "rates = rel_diffs.drop(2015)"
    ]
   },
   {
@@ -253,9 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Solution goes here"
@@ -271,9 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "update_func1(p_0, t_0, system)"
@@ -289,9 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def run_simulation(system, update_func):\n",
@@ -661,14 +651,12 @@
    "source": [
     "## Extracting data from a PDF document\n",
     "\n",
-    "The following section uses PyPDF2 to get data from a PDF document.  It uses features we have not seen yet, so don't worry if it doesn't all make sense.\n",
-    "\n",
-    "The PyPDF2 package provides functions to read PDF documents and get the data.\n",
+    "The following section uses `tabula-py` to get data from a PDF document.\n",
     "\n",
     "If you don't already have it installed, and you are using Anaconda, you can install it by running the following command in a Terminal or Git Bash:\n",
     "\n",
     "```\n",
-    "conda install -c conda-forge pypdf2\n",
+    "conda install -c conda-forge tabula-py\n",
     "```"
    ]
   },
@@ -678,14 +666,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import PyPDF2"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The 2017 report is in the data directory."
+    "from tabula import read_pdf"
    ]
   },
   {
@@ -694,210 +675,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pdfFileObj = open('data/USASAC2018-Report-30-2017-Activities-Page11.pdf', 'rb')"
+    "df = read_pdf('data/USASAC2018-Report-30-2017-Activities-Page11.pdf')"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The `PdfFileReader` object knows how to read PDF documents."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pdfReader = PyPDF2.PdfFileReader(pdfFileObj)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This file contains only one page."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pdfReader.numPages"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "`getPage` selects the only page in the document."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "page = pdfReader.getPage(0)\n",
-    "page.extractText()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The following function iterates through the lines on the page, removes whitespace, and ignores lines that contain only whitespace."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def iter_page(page):\n",
-    "    for item in page.extractText().splitlines():\n",
-    "        item = item.strip()\n",
-    "        if item:\n",
-    "            yield item"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The following function gets the next `n` pages from the page."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def next_n(iterable, n):\n",
-    "    \"\"\"Get the next n items from an iterable.\"\"\"\n",
-    "    return [next(iterable) for i in range(n)]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We skip the text at the top of the page."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "t = iter_page(page)\n",
-    "discard = next_n(t, 8)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The next 7 strings are the column headings of the table."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "columns = next_n(t, 7)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Create an empty `Dataframe` with the column headings."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.DataFrame(columns=columns)\n",
-    "df"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Get the next 19 lines of the table."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for i in range(19):\n",
-    "    year = int(next(t))\n",
-    "    data = next_n(t, 7)\n",
-    "    df.loc[year] = data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The last line in the table gets messed up, so I'll do that one by hand."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.loc[2017] = ['363', '663', '13', '2', '1041', '806', '235'] "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Here's the result."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In general, reading tables from PDF documents is fragile and error-prone.  Sometimes it is easier to just type it in."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -916,7 +695,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
