--- a/code/trees.ipynb
+++ b/code/trees.ipynb
@@ -488,7 +488,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To find the parameters that best fit the data, I'll use `fit_leastsq`.\n",
+    "To find the parameters that best fit the data, I'll use `leastsq`.\n",
     "\n",
     "We need an error function that takes parameters and returns errors:"
    ]
@@ -534,7 +534,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we can pass `error_func` to `fit_leastsq`, which finds the parameters that minimize the squares of the errors."
+    "Now we can pass `error_func` to `leastsq`, which finds the parameters that minimize the squares of the errors."
    ]
   },
   {
@@ -543,7 +543,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "best_params, details = fit_leastsq(error_func, params, data, update)\n",
+    "best_params, details = leastsq(error_func, params, data, update)\n",
     "details"
    ]
   },
@@ -749,7 +749,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "best_params, details = fit_leastsq(error_func, params, data, update3)\n",
+    "best_params, details = leastsq(error_func, params, data, update3)\n",
     "details"
    ]
   },
@@ -901,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -915,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -964,7 +964,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
