--- a/code/wall.ipynb
+++ b/code/wall.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,8 @@
     "K = UNITS.kelvin\n",
     "W = UNITS.watt\n",
     "J = UNITS.joule\n",
-    "degC = UNITS.celsius"
+    "degC = UNITS.celsius\n",
+    "s = UNITS.second"
    ]
   },
   {
@@ -94,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,12 +252,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pass the `Params` object `make_system`, which computes `init`, packs the parameters into `Series` objects, and computes the interpolation functions.\n"
+    "I'll pass the `Params` object `make_system`, which computes `init`, packs the parameters into `Series` objects, and computes the interpolation functions."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,13 +274,14 @@
     "                 T_C2 = Quantity(15.27, degC))\n",
     "    \n",
     "    ts = data.index\n",
-    "    t_end = ts[-1]\n",
+    "    t_end = ts[-1] * s\n",
     "    \n",
     "    return System(init=init,\n",
     "                  R=Series([R1, R2, R3]),\n",
     "                  C=Series([C1, C2]),\n",
     "                  T_int_func=interpolate(data.T_int),\n",
     "                  T_ext_func=interpolate(data.T_ext),\n",
+    "                  unit_temp=degC,\n",
     "                  t_end=t_end, ts=ts)"
    ]
   },
@@ -292,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,16 +355,18 @@
     "    system: System with interpolated measurements and the R Series\n",
     "    \n",
     "    returns: Series of fluxes\n",
-    "    \"\"\"\n",
-    "    # unpack the temperatures and apply units\n",
+    "    \"\"\"    \n",
+    "    # unpack the temperatures\n",
     "    T_C1, T_C2 = state\n",
-    "    T_C1 = require_units(T_C1, degC)\n",
-    "    T_C2 = require_units(T_C2, degC)\n",
     "        \n",
     "    # compute a series of temperatures from inside out\n",
     "    T_int = system.T_int_func(t)\n",
     "    T_ext = system.T_ext_func(t)\n",
-    "    T = Series([T_int, T_C1, T_C2, T_ext])\n",
+    "    \n",
+    "    T = [require_units(T_int, system.unit_temp),\n",
+    "         require_units(T_C1, system.unit_temp),\n",
+    "         require_units(T_C2, system.unit_temp),\n",
+    "         require_units(T_ext, system.unit_temp)]\n",
     "    \n",
     "    # compute differences of adjacent temperatures\n",
     "    T_diff = np.diff(T)\n",
@@ -381,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,27 +433,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "slope_func(system.init, system.ts[1], system)"
+    "slopes = slope_func(system.init, system.ts[1], system)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for y, slope in zip(system.init, slopes):\n",
+    "    print(y, slope*s)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Run the simulation, generating estimates for the time steps in the data."
+    "Now let's run the simulation, generating estimates for the time steps in the data."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
-    "results, details = run_ode_solver(system, slope_func, t_eval=system.ts)\n",
+    "results, details = run_ode_solver(system, slope_func)\n",
     "details"
    ]
   },
@@ -462,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,13 +485,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
     "def plot_results(results, data):\n",
     "    plot(data.T_int, color='C2')\n",
-    "    plot(results.T_C1, color='orange')\n",
+    "    plot(results.T_C1, color='C3')\n",
     "    plot(results.T_C2, color='C1')\n",
     "    plot(data.T_ext, color='C0')\n",
     "    decorate(xlabel='Time (s)',\n",
@@ -499,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,9 +523,9 @@
     "    results: Timeframe with T_C1 and T_C2\n",
     "    system: System object\n",
     "    \n",
-    "    returns: Timeframe with Qm_in and Qm_out\n",
+    "    returns: Timeframe with Q_in and Q_out\n",
     "    \"\"\"\n",
-    "    Q_frame = TimeFrame(index=results.index, columns=['Qm_in', 'Qm_out'])\n",
+    "    Q_frame = TimeFrame(index=results.index, columns=['Q_in', 'Q_out'])\n",
     "    \n",
     "    for t, row in results.iterrows():\n",
     "        Q = compute_flux(row, t, system)\n",
@@ -534,12 +548,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_Q_in(Q_frame, data):\n",
-    "    plot(Q_frame.Qm_in, color='gray')\n",
+    "def plot_Q_in(frame, data):\n",
+    "    plot(frame.Q_in, color='gray')\n",
     "    plot(data.Q_in, color='C2')\n",
     "    decorate(xlabel='Time (s)',\n",
     "             ylabel='Heat flux (W/$m^2$)')\n",
@@ -549,12 +563,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_Q_out(Q_frame, data):\n",
-    "    plot(Q_frame.Qm_out, color='gray')\n",
+    "def plot_Q_out(frame, data):\n",
+    "    plot(frame.Q_out, color='gray')\n",
     "    plot(data.Q_out, color='C0')\n",
     "    decorate(xlabel='Time (s)',\n",
     "             ylabel='Heat flux (W/$m^2$)')\n",
@@ -569,25 +583,28 @@
     "These results are also similar to what's in the paper (the bottom row):\n",
     "\n",
     "![Figure 3](https://ars.els-cdn.com/content/image/1-s2.0-S0378778816313056-gr3.jpg)\n",
-    "\n",
-    "I'll compute the array of errors, including `Q_in` and `Q_out`:"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def compute_error(Q_frame, data):\n",
-    "    error_Q_in = (Q_frame.Qm_in - data.Q_in).astype(float)\n",
-    "    error_Q_out = (Q_frame.Qm_out - data.Q_out).astype(float)\n",
+    "def compute_error(frame, data):\n",
+    "    model_Q_in = interpolate(Q_frame.Q_in)(data.index)\n",
+    "    error_Q_in = model_Q_in - data.Q_in\n",
+    "    \n",
+    "    model_Q_out = interpolate(Q_frame.Q_out)(data.index)\n",
+    "    error_Q_out = model_Q_out - data.Q_out\n",
+    "    \n",
     "    return np.hstack([error_Q_in, error_Q_out])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -621,21 +638,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now let's see if we can do any better than the parameters in the paper."
+    "Now let's see if we can do any better than the parameters in the paper.\n",
+    "\n",
+    "In order to work with `leastsq`, we need a version of `params` with no units."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
-    "params = Params(\n",
-    "    R1 = 0.076 * m**2 * K / W,\n",
-    "    R2 = 0.272 * m**2 * K / W,\n",
-    "    R3 = 0.078 * m**2 * K / W,\n",
-    "    C1 = 212900 * J / m**2 / K,\n",
-    "    C2 = 113100 * J / m**2 / K)"
+    "params = [0.076, 0.272, 0.078, 212900, 113100]"
    ]
   },
   {
@@ -647,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +675,9 @@
     "    \"\"\"\n",
     "    print(params)\n",
     "    system = make_system(params, data)\n",
-    "    results, details = run_ode_solver(system, slope_func, t_eval=system.ts)\n",
+    "    system = remove_units(system)\n",
+    "    \n",
+    "    results, details = run_ode_solver(system, slope_func)\n",
     "    Q_frame = recompute_fluxes(results, system)\n",
     "    errors = compute_error(Q_frame, data)\n",
     "    print('RMSE', np.sqrt(np.mean(errors**2)))\n",
@@ -677,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -688,28 +704,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pass `error_func` to `fit_leastsq` to see if it can do any better."
+    "Pass `error_func` to `leastsq` to see if it can do any better."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
-    "best_params, details = fit_leastsq(error_func, params, data)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The search ends normally."
+    "best_params, details = leastsq(error_func, params, data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -718,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -734,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -750,11 +759,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
     "system = make_system(best_params, data)\n",
+    "system = remove_units(system)\n",
+    "\n",
     "results, details = run_ode_solver(system, slope_func, t_eval=system.ts)\n",
     "Q_frame = recompute_fluxes(results, system)\n",
     "errors = compute_error(Q_frame, data)\n",
@@ -772,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -781,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -794,7 +805,7 @@
    "source": [
     "**Exercise:** Try starting the model with a different set of parameters and see if it moves toward the parameters in the paper.\n",
     "\n",
-    "I found that no matter where I start, `fit_leastsq` doesn't move far, which suggests that it is not able to optimize the parameters effectively."
+    "I found that no matter where I start, `leastsq` doesn't move far, which suggests that it is not able to optimize the parameters effectively."
    ]
   },
   {
@@ -805,12 +816,16 @@
     "\n",
     "Notes on working with degC.\n",
     "\n",
-    "Usually I construct a `Quantity` object by multiplying a number and a unit.  With degC, that doesn't work; you get  `OffsetUnitCalculusError: Ambiguous operation with offset unit (degC).`"
+    "Usually I construct a `Quantity` object by multiplying a number and a unit.  With degC, that doesn't work; you get\n",
+    "\n",
+    "```\n",
+    "OffsetUnitCalculusError: Ambiguous operation with offset unit (degC).\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -821,14 +836,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The problem seems to be that it doesn't know whether you want a temperature measurement or a temperature difference.\n",
+    "The problem is that it doesn't know whether you want a temperature measurement or a temperature difference.\n",
     "\n",
     "You can create a temperature measurement like this."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -844,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -860,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -876,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -907,7 +922,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
