--- a/code/chap07.ipynb
+++ b/code/chap07.ipynb
@@ -41,9 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "filename = 'data/World_population_estimates.html'\n",
@@ -57,9 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "un = table2.un / 1e9\n",
@@ -69,9 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "census = table2.census / 1e9\n",
@@ -141,9 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def update_func_quad(pop, t, system):\n",
@@ -198,7 +190,7 @@
    "source": [
     "results = run_simulation(system, update_func_quad)\n",
     "plot_results(census, un, results, 'Quadratic model')\n",
-    "savefig('figs/chap03-fig04.pdf')"
+    "savefig('figs/chap07-fig01.pdf')"
    ]
   },
   {
@@ -220,9 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "pop_array = linspace(0, 15, 100)\n",
@@ -248,9 +238,10 @@
     "plot(pop_array, net_growth_array)\n",
     "decorate(xlabel='Population (billions)',\n",
     "         ylabel='Net growth (billions)')\n",
-    "savefig('figs/chap03-fig05.pdf')\n",
     "\n",
-    "sns.set_style('white')"
+    "sns.set_style('white')\n",
+    "\n",
+    "savefig('figs/chap07-fig02.pdf')"
    ]
   },
   {
@@ -485,9 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Solution goes here"
@@ -526,7 +515,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
