--- a/code/chap14.ipynb
+++ b/code/chap14.ipynb
@@ -101,7 +101,7 @@
     "    \n",
     "    returns: TimeFrame\n",
     "    \"\"\"\n",
-    "    unpack(system)\n",
+    "    init, t0, t_end = system.init, system.t0, system.t_end\n",
     "    \n",
     "    frame = TimeFrame(columns=init.index)\n",
     "    frame.row[t0] = init\n",
@@ -151,15 +151,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## SweepFrame\n",
-    "\n",
-    "The following sweeps two parameters and stores the results in a `SweepFrame`"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -184,7 +175,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here's what the results look like."
+    "### Contact number"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here's the `SweepFrame` from the previous chapter, with one row for each value of `beta` and one column for each value of `gamma`."
    ]
   },
   {
@@ -193,8 +191,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "beta_array = linspace(0.1, 0.9, 11)\n",
-    "gamma_array = linspace(0.1, 0.7, 4)\n",
+    "beta_array = [0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1.0 , 1.1]\n",
+    "gamma_array = [0.2, 0.4, 0.6, 0.8]\n",
     "frame = sweep_parameters(beta_array, gamma_array)\n",
     "frame.head()"
    ]
@@ -202,49 +200,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "And here's how we can plot the results."
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for gamma in gamma_array:\n",
-    "    label = 'gamma = ' + str(gamma)\n",
-    "    plot(frame[gamma], label=label)\n",
-    "    \n",
-    "decorate(xlabel='Contacts per day (beta)',\n",
-    "         ylabel='Fraction infected',\n",
-    "         loc='upper left')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "It's often useful to separate the code that generates results from the code that plots the results, so we can run the simulations once, save the results, and then use them for different analysis, visualization, etc."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Contact number"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "After running `sweep_parameters`, we have a `SweepFrame` with one row for each value of `beta` and one column for each value of `gamma`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,14 +220,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "for gamma in frame.columns:\n",
-    "    series = frame[gamma]\n",
-    "    for beta in series.index:\n",
-    "        frac_infected = series[beta]\n",
+    "    column = frame[gamma]\n",
+    "    for beta in column.index:\n",
+    "        frac_infected = column[beta]\n",
     "        print(beta, gamma, frac_infected)"
    ]
   },
@@ -280,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,9 +253,9 @@
     "    frame: SweepFrame with one row per beta, one column per gamma\n",
     "    \"\"\"\n",
     "    for gamma in frame.columns:\n",
-    "        series = frame[gamma]\n",
-    "        for beta in series.index:\n",
-    "            frac_infected = series[beta]\n",
+    "        column = frame[gamma]\n",
+    "        for beta in column.index:\n",
+    "            frac_infected = column[beta]\n",
     "            plot(beta/gamma, frac_infected, 'ro')"
    ]
   },
@@ -308,17 +268,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "plot_sweep_frame(frame)\n",
     "\n",
     "decorate(xlabel='Contact number (beta/gamma)',\n",
-    "         ylabel='Fraction infected',\n",
-    "         legend=False)\n",
+    "         ylabel='Fraction infected')\n",
     "\n",
-    "savefig('figs/chap06-fig03.pdf')"
+    "savefig('figs/chap14-fig01.pdf')"
    ]
   },
   {
@@ -346,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +357,7 @@
     "decorate(xlabel='Contact number (c)',\n",
     "         ylabel='Fraction infected')\n",
     "\n",
-    "savefig('figs/chap06-fig04.pdf')"
+    "savefig('figs/chap14-fig02.pdf')"
    ]
   },
   {
@@ -428,6 +387,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solution goes here"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
    "outputs": [],
@@ -438,15 +406,6 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Solution goes here"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
@@ -477,20 +436,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Alternative solution\n",
-    "\n",
-    "\"\"\"We can use `np.interp` to look up `s_inf` and\n",
-    "estimate the corresponding value of `c`, but it only\n",
-    "works if the index of the series is sorted in ascending\n",
-    "order.  So we have to use `sort_index` first.\n",
-    "\"\"\"\n",
-    "\n",
-    "frac_infected_series.sort_index(inplace=True)\n",
-    "np.interp(0.26, frac_infected_series, frac_infected_series.index)"
+    "# Solution goes here"
    ]
   },
   {
@@ -517,7 +467,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
