--- a/code/chap24.ipynb
+++ b/code/chap24.ipynb
@@ -16,9 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Configure Jupyter so figures appear in the notebook\n",
@@ -43,9 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "radian = UNITS.radian\n",
@@ -63,15 +59,15 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "params = Params(Rmin = 0.02 * m,\n",
     "                Rmax = 0.055 * m,\n",
     "                L = 47 * m,\n",
-    "                t_end = 130 * s)"
+    "                omega = 10 * radian / s,\n",
+    "                t_end = 130 * s,\n",
+    "                dt = 1*s)"
    ]
   },
   {
@@ -84,9 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def estimate_k(params):\n",
@@ -96,7 +90,7 @@
     "    \n",
     "    returns: k in meters per radian\n",
     "    \"\"\"\n",
-    "    unpack(params)\n",
+    "    Rmin, Rmax, L = params.Rmin, params.Rmax, params.L\n",
     "    \n",
     "    Ravg = (Rmax + Rmin) / 2\n",
     "    Cavg = 2 * pi * Ravg\n",
@@ -116,9 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def make_system(params):\n",
@@ -128,15 +120,13 @@
     "    \n",
     "    returns: System with init, k, and ts\n",
     "    \"\"\"\n",
-    "    unpack(params)\n",
-    "    \n",
     "    init = State(theta = 0 * radian,\n",
     "                 y = 0 * m,\n",
-    "                 r = Rmin)\n",
+    "                 r = params.Rmin)\n",
     "    \n",
     "    k = estimate_k(params)\n",
-    "    \n",
-    "    return System(init=init, k=k, t_end=t_end)"
+    "\n",
+    "    return System(params, init=init, k=k)"
    ]
   },
   {
@@ -180,9 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def slope_func(state, t, system):\n",
@@ -195,9 +183,8 @@
     "    returns: sequence of derivatives\n",
     "    \"\"\"\n",
     "    theta, y, r = state\n",
-    "    unpack(system)\n",
+    "    k, omega = system.k, system.omega\n",
     "    \n",
-    "    omega = 10 * radian / s\n",
     "    dydt = r * omega\n",
     "    drdt = k * omega\n",
     "    \n",
@@ -217,7 +204,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "slope_func(system.init, 0*s, system)"
+    "slope_func(system.init, 0, system)"
    ]
   },
   {
@@ -238,14 +225,22 @@
     "    \n",
     "    state: State object with theta, y, r\n",
     "    t: time\n",
-    "    system: System object with r, k\n",
+    "    system: System object with L\n",
     "    \n",
     "    returns: difference between `y` and `L`\n",
     "    \"\"\"\n",
     "    theta, y, r = state\n",
-    "    unpack(system)\n",
     "    \n",
-    "    return y - L"
+    "    return y - system.L"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "event_func(system.init, 0, system)"
    ]
   },
   {
@@ -257,13 +252,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "results, details = run_ode_solver(system, slope_func, events=event_func, max_step=1*s)\n",
+    "results, details = run_ode_solver(system, slope_func, events=event_func)\n",
     "details"
    ]
   },
@@ -276,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,11 +285,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "unrolled = get_last_value(results.y) * m"
+    "unrolled = get_last_value(results.y)"
    ]
   },
   {
@@ -308,39 +301,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "radius = get_last_value(results.r) * m"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The total number of rotations is close to 200, which seems credible."
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "rotation = get_last_value(results.theta) / 2 / np.pi"
+    "radius = get_last_value(results.r)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The elapsed time is plausible."
+    "The total number of rotations is close to 200, which seems plausible."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "radians = get_last_value(results.theta) \n",
+    "rotations = magnitude(radians) / 2 / np.pi"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The elapsed time is about 2 minutes, which is also plausible."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,7 +457,7 @@
     "    plot_r(results)\n",
     "\n",
     "plot_three(results)\n",
-    "savefig('figs/chap11-fig01.pdf')"
+    "savefig('figs/chap24-fig01.pdf')"
    ]
   },
   {
@@ -477,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +480,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot(dydt, label='dydt')\n",
+    "decorate(xlabel='Time (s)',\n",
+    "         ylabel='Linear velocity (m/s)')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,24 +513,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Solution goes here"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Solution goes here"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
    "outputs": [],
@@ -536,6 +523,33 @@
   {
    "cell_type": "code",
    "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solution goes here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solution goes here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solution goes here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -566,7 +580,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
