--- a/code/chap25.ipynb
+++ b/code/chap25.ipynb
@@ -16,9 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Configure Jupyter so figures appear in the notebook\n",
@@ -68,9 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "radian = UNITS.radian\n",
@@ -90,9 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "params = Params(radius_disk=0.5*m,\n",
@@ -101,7 +95,8 @@
     "                mass_pot=0.3*kg,\n",
     "                force=1*N,\n",
     "                torque_friction=0.2*N*m,\n",
-    "                theta_end=0.5*radian)"
+    "                theta_end=0.5*radian,\n",
+    "                t_end=20*s)"
    ]
   },
   {
@@ -114,9 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def make_system(params):\n",
@@ -126,15 +119,15 @@
     "    \n",
     "    returns: System object\n",
     "    \"\"\"\n",
-    "    unpack(params)\n",
+    "    mass_disk, mass_pot = params.mass_disk, params.mass_pot\n",
+    "    radius_disk, radius_pot = params.radius_disk, params.radius_pot\n",
     "    \n",
-    "    init = State(theta=0, omega=0)\n",
+    "    init = State(theta=0*radian, omega=0*radian/s)\n",
     "    \n",
     "    I_disk = mass_disk * radius_disk**2 / 2\n",
     "    I_pot = mass_pot * radius_pot**2\n",
     "    \n",
-    "    return System(params, init=init, t_end=20*s,\n",
-    "                  I=I_disk+I_pot)"
+    "    return System(params, init=init, I=I_disk+I_pot)"
    ]
   },
   {
@@ -173,9 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def slope_func(state, t, system):\n",
@@ -188,7 +179,8 @@
     "    returns: sequence of derivatives\n",
     "    \"\"\"\n",
     "    theta, omega = state\n",
-    "    unpack(system)\n",
+    "    radius_disk, force = system.radius_disk, system.force\n",
+    "    torque_friction, I = system.torque_friction, system.I\n",
     "    \n",
     "    torque = radius_disk * force - torque_friction\n",
     "    alpha = torque / I\n",
@@ -209,7 +201,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "slope_func(system1.init, 0*s, system1)"
+    "slope_func(system1.init, 0, system1)"
    ]
   },
   {
@@ -235,8 +227,16 @@
     "    returns: difference from target\n",
     "    \"\"\"\n",
     "    theta, omega = state\n",
-    "    unpack(system)\n",
-    "    return theta - theta_end "
+    "    return theta - system.theta_end "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "event_func1(system1.init, 0, system1)"
    ]
   },
   {
@@ -248,14 +248,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "results1, details1 = run_ode_solver(system1, slope_func,\n",
-    "                                    events=event_func1, max_step=0.1*s)\n",
+    "results1, details1 = run_ode_solver(system1, slope_func, events=event_func1)\n",
     "details1"
    ]
   },
@@ -268,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,11 +283,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "t_0 = get_last_label(results1) * s"
+    "t_0 = results1.last_label() * s"
    ]
   },
   {
@@ -302,28 +299,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "theta, omega = get_last_value(results1)\n",
-    "init2 = State(theta=theta*radian, omega=omega*radian/s)"
+    "init2 = results1.last_row()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And a new `System` object with `force=0`."
+    "And a new `System` object with zero force."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "system2 = System(system1, t_0=t_0, init=init2, force=0)"
+    "system2 = System(system1, t_0=t_0, init=init2, force=0*N)"
    ]
   },
   {
@@ -335,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,6 +349,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "event_func2(system2.init, 0, system2)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -361,12 +366,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "results2, details2 = run_ode_solver(system2, slope_func,\n",
-    "                         events=event_func2, max_step=0.1*s)\n",
+    "slope_func(system2.init, system2.t_0, system2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results2, details2 = run_ode_solver(system2, slope_func, events=event_func2)\n",
     "details2"
    ]
   },
@@ -379,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,21 +501,20 @@
     "    # run phase 1\n",
     "    system1 = make_system(params)\n",
     "    results1, details1 = run_ode_solver(system1, slope_func, \n",
-    "                             events=event_func1, max_step=0.1*s)\n",
+    "                                          events=event_func1)\n",
     "\n",
     "    # get the final state from phase 1\n",
-    "    t_0 = get_last_label(results1) * s\n",
-    "    theta, omega = get_last_value(results1)\n",
-    "    init2 = State(theta=theta, omega=omega)\n",
+    "    t_0 = results1.last_label() * s\n",
+    "    init2 = results1.last_row()\n",
     "    \n",
     "    # run phase 2\n",
-    "    system2 = System(system1, t_0=t_0, init=init2, force=0)\n",
+    "    system2 = System(system1, t_0=t_0, init=init2, force=0*N)\n",
     "    results2, details2 = run_ode_solver(system2, slope_func, \n",
-    "                             events=event_func2, max_step=0.1*s)\n",
+    "                                        events=event_func2)\n",
     "    \n",
     "    # combine and return the results\n",
     "    results = results1.combine_first(results2)\n",
-    "    return results"
+    "    return TimeFrame(results)"
    ]
   },
   {
@@ -514,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,57 +545,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "theta_final = get_last_value(results.theta)"
+    "theta_final = results.last_row().theta"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To estimate the coefficient of friction, we'll use `fsolve`, which doesn't always work well with units.\n",
+    "Here's the error function we'll use with `root_bisect`.\n",
     "\n",
-    "So for the rest of this example, we'll run without units.  Here's a version of the `Params` object with no units."
+    "It takes a hypothetical value for `torque_friction` and returns the difference between `theta_final` and the observed duration of the first push, 1.5 radian."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "params_nodim = remove_units(params)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Here's the error function we'll use with `fsolve`.  It takes a hypothetical value for `torque_friction` and returns the difference between `theta_final` and the observed result of the first push."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "def error_func1(torque_friction, params):\n",
-    "    \"\"\"Error function for fsolve.\n",
+    "    \"\"\"Error function for root_scalar.\n",
     "    \n",
     "    torque_friction: hypothetical value\n",
     "    params: Params object\n",
     "    \n",
     "    returns: offset from target value\n",
     "    \"\"\"\n",
-    "    force = 1\n",
+    "    force = 1 * N\n",
     "    results = run_two_phases(force, torque_friction, params)\n",
-    "    theta_final = get_last_value(results.theta)\n",
+    "    theta_final = results.last_row().theta\n",
     "    print(torque_friction, theta_final)\n",
-    "    return theta_final - 1.5"
+    "    return theta_final - 1.5 * radian"
    ]
   },
   {
@@ -595,51 +591,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "guess = 0.2\n",
-    "error_func1(guess, params_nodim)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "And running `fsolve`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "res = fsolve(error_func1, guess, params_nodim)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The result is an array, so we'll extract the first (and only) element."
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "torque_friction = res[0]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "And do a test run with the estimated value."
+    "guess1 = 0.1*N*m\n",
+    "error_func1(guess1, params)"
    ]
   },
   {
@@ -648,8 +605,57 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "force = 1\n",
-    "results = run_two_phases(force, torque_friction, params_nodim)\n",
+    "guess2 = 0.3*N*m\n",
+    "error_func1(guess2, params)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And running `root_scalar`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = root_bisect(error_func1, [guess1, guess2], params)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The result is the coefficient of friction that yields a total rotation of 1.5 radian."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torque_friction = res.root"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here's a test run with the estimated value."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "force = 1 * N\n",
+    "results = run_two_phases(force, torque_friction, params)\n",
     "theta_final = get_last_value(results.theta)"
    ]
   },
@@ -668,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -680,49 +686,6 @@
    "metadata": {},
    "source": [
     "Test the error function with `force=1`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Solution goes here"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "And run `fsolve` to find the desired force."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Solution goes here"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "force = res[0]\n",
-    "results = run_two_phases(force, torque_friction, params_nodim)\n",
-    "theta_final = get_last_value(results.theta)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Exercise:** Now suppose my friend pours 0.1 kg of tea and puts the teapot back on the turntable at distance 0.3 meters from the center.  If I ask for the tea back, how much force should they apply, over an arc of 0.5 radians, to make the teapot glide to a stop back in front of me?  You can assume that torque due to friction is proportional to the total mass of the teapot and the turntable."
    ]
   },
   {
@@ -744,6 +707,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And run `root_bisect` to find the desired force."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 36,
    "metadata": {},
@@ -758,7 +728,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Solution goes here"
+    "force = res.root\n",
+    "results = run_two_phases(force, torque_friction, params)\n",
+    "theta_final = get_last_value(results.theta)"
    ]
   },
   {
@@ -767,7 +739,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Solution goes here"
+    "remaining_angle = np.pi - 1.5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Exercise:** Now suppose my friend pours 0.1 kg of tea and puts the teapot back on the turntable at distance 0.3 meters from the center.  If I ask for the tea back, how much force should they apply, over an arc of 0.5 radians, to make the teapot glide to a stop back in front of me?  You can assume that torque due to friction is proportional to the total mass of the teapot and the turntable."
    ]
   },
   {
@@ -794,10 +773,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "subplot(2, 1, 1)\n",
-    "plot_theta(results)\n",
-    "subplot(2, 1, 2)\n",
-    "plot_omega(results)"
+    "# Solution goes here"
    ]
   },
   {
@@ -819,13 +795,66 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 44,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "\n",
-    "**Exercise:** Run these simulations with different values for the weight and size of the turntable, or weight and location of the teapot.  What effect do they have on the results?\n",
-    "\n",
-    "If you do some analysis, you might find that you can answer the original question without doing any simulation."
+    "# Solution goes here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solution goes here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solution goes here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solution goes here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solution goes here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solution goes here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solution goes here"
    ]
   }
  ],
@@ -845,7 +874,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
