--- a/code/yoyo.ipynb
+++ b/code/yoyo.ipynb
@@ -16,9 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Configure Jupyter so figures appear in the notebook\n",
@@ -99,9 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "T, a, alpha, I, m, g, r = symbols('T a alpha I m g r')"
@@ -137,9 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "soln = solve([eq1, eq2, eq3], [T, a, alpha])"
@@ -195,9 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "radian = UNITS.radian\n",
@@ -227,9 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "params = Params(Rmin = 8e-3 * m,\n",
@@ -255,9 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def make_system(params):\n",
@@ -269,7 +257,8 @@
     "    returns: System with init, k, Rmin, Rmax, mass,\n",
     "                         I, g, ts\n",
     "    \"\"\"\n",
-    "    unpack(params)\n",
+    "    L, mass = params.L, params.mass\n",
+    "    Rout, Rmax, Rmin = params.Rout, params.Rmax, params.Rmin \n",
     "    \n",
     "    init = State(theta = 0 * radian,\n",
     "                 omega = 0 * radian/s,\n",
@@ -279,10 +268,7 @@
     "    I = mass * Rout**2 / 2\n",
     "    k = (Rmax**2 - Rmin**2) / 2 / L / radian    \n",
     "    \n",
-    "    return System(init=init, k=k,\n",
-    "                  Rmin=Rmin, Rmax=Rmax,\n",
-    "                  mass=mass, I=I, g=g,\n",
-    "                  t_end=t_end)"
+    "    return System(params, init=init, I=I, k=k)"
    ]
   },
   {
@@ -330,9 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Solution goes here"
@@ -381,7 +365,6 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
-    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -400,7 +383,6 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {
-    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -493,7 +475,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Use `gradient` to estimate the derivative of `v`.  How goes the acceleration of the yo-yo compare to `g`?"
+    "Use `gradient` to estimate the derivative of `v`.  How does the acceleration of the yo-yo compare to `g`?"
    ]
   },
   {
@@ -529,7 +511,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
